chuyển đổi sang html
chuyển đổi sang html

--- a/aboutOurJourney.html
+++ b/aboutOurJourney.html
@@ -1,3 +1,186 @@
+<!doctype html>
+<html>
+
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+        <title>Nexttech</title>
+        <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+
+        <link type="text/css" href="css/awwwards.css" rel="stylesheet" />
+        <link type="text/css" href="css/fwa.css" rel="stylesheet" />
+        <link type="text/css" href="css/style.css" rel="stylesheet" />
+        <link type="text/css" href="css/selectric.css" rel="stylesheet" />
+        <link type="text/css" href="css/add.css" rel="stylesheet" />
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/remodal.css">
+        <link rel="stylesheet" href="css/remodal-default-theme.css">
+
+        <meta name="description" content="Next tech Outsource" />
+        <meta name="keywords" content="Chợ điện tử, Vimo, Ngân Lượng, Bảo Kim" />  
+        <meta property="og:title" content="Next tech | Out Source"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:description" content="Next tech Outsource"/>
+        <meta property="og:url" content="demo.mantanservices.com/next-tech/"/>
+        <meta property="og:site_name" content="Next tech | Out Source"/>
+        <meta property="og:image" content="http://i.imgur.com/RvPvSh9.png" /> 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+    </head>
+
+    <body>
+        <div id="overflowClosed">
+            <div id="scrollerDiv"></div>
+        </div>
+        <div id="bg">
+            <div id="grid"></div>
+        </div>
+        <div id="canvasPIXI"></div>
+        <div id="mainQuoteAll">
+            <div id="mainQuoteHidden">
+                <div id="mainQuote">
+                    <br></div>
+            </div>
+            <div id="secondQuote"></div>
+            <div id="lineQuote1" class="lineQuote"></div>
+            <div id="lineQuote2" class="lineQuote"></div>
+            <div id="lineQuote3" class="lineQuote"></div>
+
+        </div>
+<style>
+    #instytutItem .menuOver {
+        visibility: inherit !important;
+        opacity: 1 !important;
+    }
+    #instytutItem .menuOut {
+        transform: matrix3d(0, 0, -1, 0.004, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1) !important;
+    }
+</style>
+<script>var selectedTemplate = "quoteTextTMP";</script>  
+<div id="content">
+<article id="mainArticle" class="mainAbout">   
+    <div id="scrollingSection">
+        <div id="headerSection">
+            <h2 id="titleHeader2" class="titleHeader2">"Story of our transformation: From zero to global."</h2>
+        </div>
+        <div id="fullText">
+            <div class="center-image"><img src="images/ourjourney.png" alt=""/></div>
+            <div class="about-content">
+
+                <!--StartJourney-->
+                <div class="continueMilestone">
+                    <p class="text-blue">to be continued</p>
+                    <div class="threecircle">
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                    </div>
+                </div>
+                <!--Journey4-->
+                <div class="listJourney">
+                    <div class="leftJourney">
+                        <span class="leftMilestone"><img src="images/btnOurJourney.png" alt=""/></span>
+                        <span class="text-blue year">2014</span>
+                        <ul>
+                            <li>Exclusive strategic partnership setup with key partners to join their expansion to South East Asia</li>
+                            <li>Oct: Jointly introduced the first D-Com 2014 ecosystem in SEA</li>
+                        </ul>
+                    </div>
+                    <div class="rightJourney">
+                        <span class="rightMilestone"><img src="images/btnOurJourney.png" alt=""/></span>
+                        <span class="text-blue year">2013</span>
+                        <p>  Mar: Strategic investment into online payment subsidiary by MOL Group </p>
+                        <p>Made 15x Return-on-Investment to 2013 PeaceSoft (after 4 years)</p>
+                    </div>
+                </div>
+
+                <!--Journey3-->
+                <div class="listJourney">
+                    <div class="leftJourney">
+                        <span class="leftMilestone"><img src="images/btnOurJourney.png" alt=""/></span>
+                        <span class="text-blue year">2012</span>
+                        <ul>
+                            <li>Jul: Launched ShipChung.vn shipping and Cash-on-Delivery gateway</li>
+                            <li>Oct: Spun-off online payment subsidiary</li>
+                            <li>Dec: Spun-off eCommerce subsidiary</li>
+                        </ul>
+                    </div>
+                    <div class="rightJourney">
+                        <span class="rightMilestone"><img src="images/btnOurJourney.png" alt=""/></span>
+                        <span class="text-blue year">2011</span>
+                        <p> Mar: Serie-C investment by eBay (the first and only investee in South East Asia) 2011</p>
+                        <p> Made 2.5x valuation growth (after 2 years)</p>
+                    </div>
+                </div>
+
+                <!--Journey2-->
+                <div class="listJourney">
+                    <div class="leftJourney">
+                        <span class="leftMilestone"><img src="images/btnOurJourney.png" alt=""/></span>
+                        <span class="text-blue year">2009</span>
+                        <ul>
+                            <li>Apr: Launched eBay.vn, NganLuong.vn and AdNet.vn</li>
+                            <li> Introduced the first of E-Commerce ecosystem in Vietnam</li>
+                        </ul>
+                    </div>
+                    <div class="rightJourney">
+                        <span class="rightMilestone"><img src="images/btnOurJourney.png" alt=""/></span>
+                        <span class="text-blue year">2008</span>
+                        <p> Jun: Co-branding agreement with eBay </p>
+                        <p> Sep: Serie-B investment by SoftBank </p>
+                        <p> Made 12x valuation growth (after 3 years)</p>
+                    </div>
+                </div>
+
+                <div class="listJourney">
+                    <div class="leftJourney">
+                        <span class="leftMilestone"><img src="images/btnOurJourney.png" alt=""/></span>
+                        <span class="text-blue year">2005</span>
+                        <ul>
+                            <li> Apr: Started e-Com with local marketplace </li>
+                            <li> Aug: Serie-A investment by IDG</li>
+                            <li> First venture capital round in Vietnam</li>
+                        </ul>
+                    </div>
+                    <div class="rightJourney">
+                        <span class="rightMilestone"><img src="images/btnOurJourney.png" alt=""/></span>
+                        <span class="text-blue year">2001</span>
+                        <p>Apr: Founded as a software company</p>
+                        <p>With ZERO starting point: NO funding, NO office and NO staff </p>
+                    </div>
+                </div>
+
+
+
+
+
+
+
+                <div id="startBottom" class="text-blue"></div>
+
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+            </div>
+        </div>
+    </div>
+</article>
+<div id="mainHeader" class="headerAbout">   
+    <h1 id="titleHeader" class="titleHeader">ABOUT US</h1>
+    <nav id="subNavi">
+        <ul id="subNaviItems">
+            <li class="liSub"><a onclick="GoToHomePage()" href="javascript:void(0)">Home</a></li>
+            <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+            <li class="liSub"><a  href="about.html">About us</a></li>
+            <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+            <li class="liSub active"><a class="active" href="aboutOurJourney.html">Our Journey</a></li>
+        </ul>
+    </nav>
+</div>
+</div>
 <div id="infoDescription">
     <div id="infoDsc">
         <div id="infoFull">
