--- a/peopleOurDNA.html
+++ b/peopleOurDNA.html
@@ -1,3 +1,211 @@
+<!doctype html>
+<html>
+
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+        <title>Nexttech</title>
+        <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+
+        <link type="text/css" href="css/awwwards.css" rel="stylesheet" />
+        <link type="text/css" href="css/fwa.css" rel="stylesheet" />
+        <link type="text/css" href="css/style.css" rel="stylesheet" />
+        <link type="text/css" href="css/selectric.css" rel="stylesheet" />
+        <link type="text/css" href="css/add.css" rel="stylesheet" />
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/remodal.css">
+        <link rel="stylesheet" href="css/remodal-default-theme.css">
+
+        <meta name="description" content="Next tech Outsource" />
+        <meta name="keywords" content="Chợ điện tử, Vimo, Ngân Lượng, Bảo Kim" />  
+        <meta property="og:title" content="Next tech | Out Source"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:description" content="Next tech Outsource"/>
+        <meta property="og:url" content="demo.mantanservices.com/next-tech/"/>
+        <meta property="og:site_name" content="Next tech | Out Source"/>
+        <meta property="og:image" content="http://i.imgur.com/RvPvSh9.png" /> 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+    </head>
+
+    <body>
+        <div id="overflowClosed">
+            <div id="scrollerDiv"></div>
+        </div>
+        <div id="bg">
+            <div id="grid"></div>
+        </div>
+        <div id="canvasPIXI"></div>
+        <div id="mainQuoteAll">
+            <div id="mainQuoteHidden">
+                <div id="mainQuote">
+                    <br></div>
+            </div>
+            <div id="secondQuote"></div>
+            <div id="lineQuote1" class="lineQuote"></div>
+            <div id="lineQuote2" class="lineQuote"></div>
+            <div id="lineQuote3" class="lineQuote"></div>
+
+        </div>
+<style>
+    #inicjatywyItem .menuOver {
+        visibility: inherit !important;
+        opacity: 1 !important;
+    }
+    #inicjatywyItem .menuOut {
+        transform: matrix3d(0, 0, -1, 0.004, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1) !important;
+    }
+</style>
+<script>var selectedTemplate = "quoteTextTMP";</script> 
+<div id="content">
+    <article id="mainArticle" class="mainAbout">
+        <div id="scrollingSection">
+            <div id="headerSection">
+                <h2 id="titleHeader2" class="titleHeader2">"Advantages come from our DNA."</h2>
+            </div>
+            <div id="fullText">
+                <div class="center-image"><img src="images/logoOurDNA.png" alt=""/></div>
+
+                <div class="about-content">    
+
+                    <div class="row">
+                        <div class="leftAchivement">
+                            <div class="timeAchivement upper-text">
+                                <h4>Team</h4>
+                            </div>
+                            <div class="textContentAchivement">
+                                <p>TEAM = Together Everyone Achieve More.</p>
+                                <p>Less me or more we. It could only be solidariry!</p>
+                            </div>
+                            <div class="liner">
+                                <div class="circleLeft"></div>
+                                <div class="linerSpace"></div>
+                                <div class="circleRight"></div>
+                            </div>
+                        </div>
+                        <div class="centerAchivement">
+                            <div class="timeAchivement upper-text">
+                                <h4>Passion</h4>
+                            </div>
+                            <div class="textContentAchivement">
+                                <p>Choose a job you LOVE, so you won’t have to work a day in your life!</p>
+                            </div>
+                            <div class="liner">
+                                <div class="circleLeft"></div>
+                                <div class="linerSpace"></div>
+                                <div class="circleRight"></div>
+                            </div>
+                        </div>
+                        <div class="rightAchivement">
+                            <div class="timeAchivement upper-text">
+                                <h4>Teach and learn</h4>
+                            </div>
+                            <div class="textContentAchivement">
+                                <p>A good teaching can inspire hope, ignite the imagination and instill a love of learning</p>
+                            </div>
+                            <div class="liner">
+                                <div class="circleLeft"></div>
+                                <div class="linerSpace"></div>
+                                <div class="circleRight"></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="leftAchivement">
+                            <div class="timeAchivement upper-text">
+                                <h4>Customer first</h4>
+                            </div>
+                            <div class="textContentAchivement">
+                                <p>Creating new VALUES to customers and partners, without BORDER and LIMIT</p>
+                            </div>
+                            <div class="liner">
+                                <div class="circleLeft"></div>
+                                <div class="linerSpace"></div>
+                                <div class="circleRight"></div>
+                            </div>
+                        </div>
+                        <div class="centerAchivement">
+                            <div class="timeAchivement upper-text">
+                                <h4>Embrace changes</h4>
+                            </div>
+                            <div class="textContentAchivement">
+                                <p>Organization’s capacity = the weakest point. So change yourself, or to be changed!</p>
+                            </div>
+                            <div class="liner">
+                                <div class="circleLeft"></div>
+                                <div class="linerSpace"></div>
+                                <div class="circleRight"></div>
+                            </div>
+                        </div>
+                        <div class="rightAchivement">
+                            <div class="timeAchivement upper-text">
+                                <h4>Initative</h4>
+                            </div>
+                            <div class="textContentAchivement">
+                                <p>Take chance, take risk, take responsibility.</p>
+                                <p>Awareness -> Mentality -> Action -> Result -> Awareness</p>
+                            </div>
+                            <div class="liner">
+                                <div class="circleLeft"></div>
+                                <div class="linerSpace"></div>
+                                <div class="circleRight"></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row peopleOurDNA">
+                        <div class="leftAchivement">
+                            <div class="timeAchivement upper-text">
+                                <h4>Creative</h4>
+                            </div>
+                            <div class="textContentAchivement">
+                                <p>Great minds discuss ideas. Average minds discuss events. Small minds discuss people</p>
+                            </div>
+                            <div class="liner">
+                                <div class="circleLeft"></div>
+                                <div class="linerSpace"></div>
+                                <div class="circleRight"></div>
+                            </div>
+                        </div>
+                        <div class="rightAchivement">
+                            <div class="timeAchivement upper-text">
+                                <h4>Faithful</h4>
+                            </div>
+                            <div class="textContentAchivement">
+                                <p>Faith is like Wi-Fi, It is invisible but it has the power to connect you to what you need</p>
+                            </div>
+                            <div class="liner">
+                                <div class="circleLeft"></div>
+                                <div class="linerSpace"></div>
+                                <div class="circleRight"></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                </div>
+            </div>
+        </div>
+    </article>
+    <div id="mainHeader" class="headerAbout">   
+        <h1 id="titleHeader" class="titleHeader">People</h1>
+        <nav id="subNavi">
+            <ul id="subNaviItems">
+                <li class="liSub"><a onclick="GoToHomePage()" href="javascript:void(0)">Home</a></li>
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub"><a  href="people.html">People</a></li>
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub active"><a class="active" href="peopleOurDNA.html">People DNA</a></li>
+            </ul>
+        </nav>
+    </div>
+</div>
 <div id="infoDescription">
     <div id="infoDsc">
         <div id="infoFull">
