--- a/recruitment.html
+++ b/recruitment.html
@@ -1,3 +1,275 @@
+<!doctype html>
+<html>
+
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+        <title>Nexttech</title>
+        <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+
+        <link type="text/css" href="css/awwwards.css" rel="stylesheet" />
+        <link type="text/css" href="css/fwa.css" rel="stylesheet" />
+        <link type="text/css" href="css/style.css" rel="stylesheet" />
+        <link type="text/css" href="css/selectric.css" rel="stylesheet" />
+        <link type="text/css" href="css/add.css" rel="stylesheet" />
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/remodal.css">
+        <link rel="stylesheet" href="css/remodal-default-theme.css">
+
+        <meta name="description" content="Next tech Outsource" />
+        <meta name="keywords" content="Chợ điện tử, Vimo, Ngân Lượng, Bảo Kim" />  
+        <meta property="og:title" content="Next tech | Out Source"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:description" content="Next tech Outsource"/>
+        <meta property="og:url" content="demo.mantanservices.com/next-tech/"/>
+        <meta property="og:site_name" content="Next tech | Out Source"/>
+        <meta property="og:image" content="http://i.imgur.com/RvPvSh9.png" /> 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+    </head>
+
+    <body>
+        <div id="overflowClosed">
+            <div id="scrollerDiv"></div>
+        </div>
+        <div id="bg">
+            <div id="grid"></div>
+        </div>
+        <div id="canvasPIXI"></div>
+        <div id="mainQuoteAll">
+            <div id="mainQuoteHidden">
+                <div id="mainQuote">
+                    <br></div>
+            </div>
+            <div id="secondQuote"></div>
+            <div id="lineQuote1" class="lineQuote"></div>
+            <div id="lineQuote2" class="lineQuote"></div>
+            <div id="lineQuote3" class="lineQuote"></div>
+
+        </div>
+<style>
+    #zalozycielkaItem .menuOver {
+        visibility: inherit !important;
+        opacity: 1 !important;
+    }
+    #zalozycielkaItem .menuOut {
+        transform: matrix3d(0, 0, -1, 0.004, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1) !important;
+    }
+</style>
+<script>var selectedTemplate = "quoteTextTMP";</script>  
+<div id="content">
+    <article id="mainArticle" class="mainAbout">
+        <div id="scrollingSection">
+            <div id="headerSection">
+                <h2 id="titleHeader2" class="titleHeader2">"Time spent on hiring is time well spent."</h2>
+            </div>
+            <div id="fullText">   
+
+                <!--Recruitment1-->
+                <div class="listRecruit">
+                    <div class="leftRecruit">
+                        <div class="circleLeft dotTimeline"></div>
+                        <span class="nameRecruit lineRecuit"><a href="recruitmentDetail.html">Accountant and admin manager</a></span>
+                        <span class="more-info">Manager <br/> <b><i>USD 600 - 1200</i></b></span>
+                    </div>
+                    <div class="centerRecruit">
+                        <span class="lineRecuit"><img src="images/posted.png" alt=""/>&nbsp; Posted: 03/02/2016</span>
+                        <span class="lineRecuit"><img src="images/location.png" alt=""/>&nbsp; Location: Hanoi, Hochiminh</span>
+                        <br/>
+                        <br/>
+                        <span class="lineRecuit"><img src="images/finance_timeline.png" alt=""/>&nbsp; Finance</span>
+                        <span class="lineRecuit"><img src="images/inventory_timeline.png" alt=""/>&nbsp; Inventories Software</span>
+                        <span class="lineRecuit"><img src="images/account_timeline.png" alt=""/>&nbsp; Accountancy</span>
+
+                    </div>
+                    <span class="rightRecruit">
+                        <span class="upper-text lineRecuit nameRightRecruit">Chodientu.vn</span>
+                        <span class="lineRecuit imageRightRecruit"><a href="" target="_blank"><img src="images/chodientu_timeline.png" alt=""/></a></span>
+                        <span class="lineRecuit linkRightRecruit"><a href="recruitmentDetail.html">See more <img src="images/arrow.png" alt=""></a></span>
+                    </span>                
+                </div>
+                <div class="listRecruit">
+                    <div class="leftRecruitExpand"></div>
+                    <div class="centerRecruitExpand">
+                        <div class="recruitFind">
+                            <span class="recruitExpand recruitExpandShow">
+                                <a class="removeSpace addToggle" href="#"><img src="images/addbutton/thirdadd-button.png" alt=""></a>               
+                                <a class="removeSpace2 addToggle" href="#"><img src="images/recruitmentSub.png" alt=""></a>               
+                                <span class="offerQuestion"><img src="images/lineblur_timeline.png" alt=""/>&nbsp; What do we offer?</span>                
+                            </span>
+                            <div class="recruitCollapse">
+                                <ul>
+                                    <li>Benefits In accordance with Vietnamese Labour Law</li>
+                                    <li>Ongoing training & development</li>
+                                    <li>Good renumeration & high commissions/bonuses</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <span class="rightRecruitExpand"></span>                
+                </div>
+
+
+                <!--Recruitment2-->
+                <div class="listRecruit">
+                    <div class="leftRecruit">
+                        <span class="nameRecruit lineRecuit"><a href="recruitmentDetail.html">Accountant and admin manager</a></span>
+                        <span class="more-info">Manager <br/> <b><i>USD 600 - 1200</i></b></span>
+                    </div>
+                    <div class="centerRecruit">
+                        <span class="lineRecuit"><img src="images/posted.png" alt=""/>&nbsp; Posted: 03/02/2016</span>
+                        <span class="lineRecuit"><img src="images/location.png" alt=""/>&nbsp; Location: Hanoi, Hochiminh</span>
+                        <br/>
+                        <br/>
+                        <span class="lineRecuit"><img src="images/finance_timeline.png" alt=""/>&nbsp; Finance</span>
+                        <span class="lineRecuit"><img src="images/inventory_timeline.png" alt=""/>&nbsp; Inventories Software</span>
+                        <span class="lineRecuit"><img src="images/account_timeline.png" alt=""/>&nbsp; Accountancy</span>
+                    </div>
+                    <div class="rightRecruit">
+                        <span class="upper-text lineRecuit nameRightRecruit">Chodientu.vn</span>
+                        <span class="lineRecuit imageRightRecruit"><a href="" target="_blank"><img src="images/chodientu_timeline.png" alt=""/></a></span>
+                        <span class="lineRecuit linkRightRecruit"><a href="recruitmentDetail.html">See more <img src="images/arrow.png" alt=""></a></span>
+                    </div> 
+                </div>
+                <div class="listRecruit">
+                    <div class="leftRecruitExpand"></div>
+                    <div class="centerRecruitExpand">
+                        <div class="recruitFind">
+                            <span class="recruitExpand recruitExpandShow">
+                                <a class="removeSpace addToggle" href="#"><img src="images/addbutton/thirdadd-button.png" alt=""></a>               
+                                <a class="removeSpace2 addToggle" href="#"><img src="images/recruitmentSub.png" alt=""></a>               
+                                <span class="offerQuestion"><img src="images/lineblur_timeline.png" alt=""/>&nbsp; What do we offer?</span>                
+                            </span>
+                            <div class="recruitCollapse">
+                                <ul>
+                                    <li>Benefits In accordance with Vietnamese Labour Law</li>
+                                    <li>Ongoing training & development</li>
+                                    <li>Good renumeration & high commissions/bonuses</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <span class="rightRecruitExpand"></span>                
+                </div>
+
+
+
+                <!--Recruitment3-->
+                <div class="listRecruit">
+                    <div class="leftRecruit">
+                        <span class="nameRecruit lineRecuit"><a href="recruitmentDetail.html">Accountant and admin manager</a></span>
+                        <span class="more-info">Manager <br/> <b><i>USD 600 - 1200</i></b></span>
+                    </div>
+                    <div class="centerRecruit">
+                        <span class="lineRecuit"><img src="images/posted.png" alt=""/>&nbsp; Posted: 03/02/2016</span>
+                        <span class="lineRecuit"><img src="images/location.png" alt=""/>&nbsp; Location: Hanoi, Hochiminh</span>
+                        <br/>
+                        <br/>
+                        <span class="lineRecuit"><img src="images/finance_timeline.png" alt=""/>&nbsp; Finance</span>
+                        <span class="lineRecuit"><img src="images/inventory_timeline.png" alt=""/>&nbsp; Inventories Software</span>
+                        <span class="lineRecuit"><img src="images/account_timeline.png" alt=""/>&nbsp; Accountancy</span>                    
+                    </div>
+                    <div class="rightRecruit">
+                        <span class="upper-text lineRecuit nameRightRecruit">Chodientu.vn</span>
+                        <span class="lineRecuit imageRightRecruit"><a href="" target="_blank"><img src="images/chodientu_timeline.png" alt=""/></a></span>
+                        <span class="lineRecuit linkRightRecruit"><a href="recruitmentDetail.html">See more <img src="images/arrow.png" alt=""></a></span>
+                    </div> 
+                </div> 
+                <div class="listRecruit">
+                    <div class="leftRecruitExpand"></div>
+                    <div class="centerRecruitExpand">
+                        <div class="recruitFind">
+                            <span class="recruitExpand recruitExpandShow">
+                                <a class="removeSpace addToggle" href="#"><img src="images/addbutton/thirdadd-button.png" alt=""></a>               
+                                <a class="removeSpace2 addToggle" href="#"><img src="images/recruitmentSub.png" alt=""></a>               
+                                <span class="offerQuestion"><img src="images/lineblur_timeline.png" alt=""/>&nbsp; What do we offer?</span>                
+                            </span>
+                            <div class="recruitCollapse">
+                                <ul>
+                                    <li>Benefits In accordance with Vietnamese Labour Law</li>
+                                    <li>Ongoing training & development</li>
+                                    <li>Good renumeration & high commissions/bonuses</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <span class="rightRecruitExpand"></span>                
+                </div>
+
+                <!--Recruitment4-->
+                <div class="listRecruit">
+                    <div class="leftRecruit">
+                        <span class="nameRecruit lineRecuit"><a href="recruitmentDetail.html">Accountant and admin manager</a></span>
+                        <span class="more-info">Manager <br/> <b><i>USD 600 - 1200</i></b></span>
+                    </div>
+                    <div class="centerRecruit">
+                        <span class="lineRecuit"><img src="images/posted.png" alt=""/>&nbsp; Posted: 03/02/2016</span>
+                        <span class="lineRecuit"><img src="images/location.png" alt=""/>&nbsp; Location: Hanoi, Hochiminh</span>
+                        <br/>
+                        <br/>
+                        <span class="lineRecuit"><img src="images/finance_timeline.png" alt=""/>&nbsp; Finance</span>
+                        <span class="lineRecuit"><img src="images/inventory_timeline.png" alt=""/>&nbsp; Inventories Software</span>
+                        <span class="lineRecuit"><img src="images/account_timeline.png" alt=""/>&nbsp; Accountancy</span>
+                        <div class="">
+                            <div class="recruitExpand">
+                                <a class="removeSpace" href="javascipt:void(0)"><img src="images/addbutton/thirdadd-button.png" alt=""></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rightRecruit">
+                        <span class="upper-text lineRecuit nameRightRecruit">Chodientu.vn</span>
+                        <span class="lineRecuit imageRightRecruit"><a href="" target="_blank"><img src="images/chodientu_timeline.png" alt=""/></a></span>
+                        <span class="lineRecuit linkRightRecruit"><a href="recruitmentDetail.html">See more <img src="images/arrow.png" alt=""></a></span>
+                    </div> 
+                </div>
+
+                <div class="recruitpagination">
+                    <div class="text-blue dotted">
+                        <div class="threecircle">
+                            <div class="circle"></div>
+                            <div class="circle"></div>
+                            <div class="circle"></div>
+                        </div>
+                    </div>
+                    <nav>
+                        <ul id="pagination">
+                            <li class="active"><a href="#" class="active">1</a></li>
+                            <li><span class="spaceSub text-blue">/</span></li>
+                            <li><a href="#">2</a></li>
+                            <li><span class="spaceSub text-blue">/</span></li>
+                            <li><a href="#">3</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+
+            </div>
+        </div>
+    </article>
+    <div id="mainHeader" class="headerAbout">   
+        <h1 id="titleHeader" class="titleHeader">Recruitment</h1>
+        <nav id="subNavi">
+            <ul id="subNaviItems">
+                <li class="liSub"><a onclick="GoToHomePage()" href="javascript:void(0)">Home</a></li>
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub active"><a class="active" href="recruitment.html">Recruitment</a></li>           
+            </ul>
+        </nav>
+    </div>
+</div>
+<script>
+    $(".recruitCollapse").hide();
+    $(".recruitFind").click(function () {
+        $(this).find('.removeSpace2').toggleClass('displayFlex');
+        $(this).find('.removeSpace').toggle();
+        $(this).find('.offerQuestion').toggleClass('displayBlock');
+        $(this).find('.recruitCollapse').slideToggle('slow');
+
+    });
+</script>
 <div id="infoDescription">
     <div id="infoDsc">
         <div id="infoFull">
