--- a/servicesWebshop.html
+++ b/servicesWebshop.html
@@ -1,3 +1,210 @@
+<!doctype html>
+<html>
+
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+        <title>Nexttech</title>
+        <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+
+        <link type="text/css" href="css/awwwards.css" rel="stylesheet" />
+        <link type="text/css" href="css/fwa.css" rel="stylesheet" />
+        <link type="text/css" href="css/style.css" rel="stylesheet" />
+        <link type="text/css" href="css/selectric.css" rel="stylesheet" />
+        <link type="text/css" href="css/add.css" rel="stylesheet" />
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/remodal.css">
+        <link rel="stylesheet" href="css/remodal-default-theme.css">
+
+        <meta name="description" content="Next tech Outsource" />
+        <meta name="keywords" content="Chợ điện tử, Vimo, Ngân Lượng, Bảo Kim" />  
+        <meta property="og:title" content="Next tech | Out Source"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:description" content="Next tech Outsource"/>
+        <meta property="og:url" content="demo.mantanservices.com/next-tech/"/>
+        <meta property="og:site_name" content="Next tech | Out Source"/>
+        <meta property="og:image" content="http://i.imgur.com/RvPvSh9.png" /> 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+    </head>
+
+    <body>
+        <div id="overflowClosed">
+            <div id="scrollerDiv"></div>
+        </div>
+        <div id="bg">
+            <div id="grid"></div>
+        </div>
+        <div id="canvasPIXI"></div>
+        <div id="mainQuoteAll">
+            <div id="mainQuoteHidden">
+                <div id="mainQuote">
+                    <br></div>
+            </div>
+            <div id="secondQuote"></div>
+            <div id="lineQuote1" class="lineQuote"></div>
+            <div id="lineQuote2" class="lineQuote"></div>
+            <div id="lineQuote3" class="lineQuote"></div>
+
+        </div>
+<style>
+    #ofertaItem2 .menuOver {
+        visibility: inherit !important;
+        opacity: 1 !important;
+    }
+    #ofertaItem2 .menuOut {
+        transform: matrix3d(0, 0, -1, 0.004, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1) !important;
+    }
+</style>
+<script>var selectedTemplate = "quoteTextTMP";</script>  
+<div id="content">
+    <article id="mainArticle" class="mainAbout">
+        <div id="scrollingSection">
+            <div id="fullText" class="">
+                <div class="servicestitle">
+                    <span class="servicelogo"><img src="images/service-weshop.png" alt=""/></span>
+                    <span class="servicelink">
+                        <a href="http://weshop.com.vn/" target="_blank">www.weshop.vn <img src="images/arrow.png" alt=""/></a>
+                    </span>
+                </div>
+
+                <h4 class="text-blue upper-text peacesoftname serviceBreak">1. who we are</h4>
+
+                <p class="peacesoftcontent">
+                    Are you looking for products on Amazon, eBay, or on many popular websites which cannot be found on your native market?
+                    Are you encountering some trouble in cross-border shopping which make you anxious? Lack of foreign language skills? Order failed as payment method is not accepted? Risks of loss or damage?
+                    Here we are to help you buy anything from the outside world with ease! We redefine the concept of importation by enabling South East Asians shop globally & easily through a centralized service portal with best deals, home door delivery and total peace-of-mind.
+                </p>
+
+                <h4 class="text-blue upper-text peacesoftname serviceBreak">2. our feature</h4>
+
+                <div class="compensation servicesDistance">
+                    <div class="comp-same">
+                        <div class="shortlineLeft"><img src="images/lineshort.png" alt=""/></div>
+                        <div class="balance"><img src="images/balance.png" alt=""/></div>
+                    </div>
+
+                    <div class="comp-same">
+                        <div class="longlineLeft"><img src="images/longline.png" alt=""/></div>
+                        <div class="longlineRight"><img src="images/longline.png" alt=""/></div>
+                        <div class="circleadd"><img src="images/circleadd.png" alt=""/></div>                        
+                    </div>
+
+                    <div class="comp-same">
+                        <div class="shortlineRight"><img src="images/lineshort.png" alt=""/></div>
+                        <div class="triangular"><img src="images/triangular.png" alt=""/></div>
+
+                    </div>
+                </div>   
+
+                <div class="compensation">
+                    <div class="comp-same">
+                        <h5 class="peacesofttitle text-blue">People</h5>
+                        <p>We have a team of enthusiastic and highly skilled people to be your “shopping assistant”. They are available to help you shop and ship, handle overseas issues to suit your needs.</p>
+                        <div class="standline">
+                            <img src="images/standline.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="comp-same">
+                        <h5 class="peacesofttitle text-blue">Process</h5>
+                        <p>Our process is reliable and fast which gives you more time enjoying your new items. WeShop is providing a comprehensive cross-border shopping and shipping facilitation process that is more friendly to buyers</p>
+                        <div class="standline">
+                            <img src="images/standline.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="comp-same">
+                        <h5 class="peacesofttitle text-blue">Product</h5>
+                        <p>Unlimited choices for you! Weshop is where you can shop millions of products on your fingertip. Join with us now and you won't miss out on best deals from your favorite brands
+                        </p>
+                    </div>
+                </div>
+                <br/>
+                <br/>
+
+                <h4 class="text-blue upper-text peacesoftname serviceBreak">3. our commitment</h4>
+
+                <!--Commitment1-->
+                <div class="listCommitment">
+                    <div class="leftCommitment">
+                        <div class="circleLeft dotTimelineServices"></div>
+                        <p class="nameCommitment">Convenient shopping experience</p>
+                    </div>
+                    <div class="rightCommitment">  
+                        <div class="servicesExpand  trigger">
+                            <a class="removeSpace" href="#content1"><img src="images/addbutton/thirdadd-button.png" alt=""></a>  
+                            <a class="hiddenButton" href="#"><img src="images/recruitmentSub.png" alt=""></a>                                
+                        </div>
+                        <p class="textCommitment"> We are committed to ensuring our customers’ satisfaction by offering a convenient online shopping experience, which allows you to purchase many imported products from various countries with just one click!</p>
+                    </div>
+                </div>            
+
+                <!--Commitment2-->
+                <div class="listCommitment">
+                    <div class="leftCommitment">
+                        <p class="nameCommitment">Innovation</p>
+                    </div>
+                    <div class="rightCommitment">
+                        <div class="servicesExpand  trigger">
+                            <a class="removeSpace" href="#content2"><img src="images/addbutton/thirdadd-button.png" alt=""></a>                              
+                        </div>
+                        <p class="textCommitment"> WeShop is originated from the innovative ideas to meet customers’ requirement and satisfaction. This helps to maximise the buying power of your shopping online</p>
+                    </div>
+                </div>            
+
+                <!--Commitment3-->
+                <div class="listCommitment">
+                    <div class="leftCommitment">
+                        <p class="nameCommitment">Responsibilities</p>
+                    </div>
+                    <div class="rightCommitment">                   
+                        <p class="textCommitment">Our mission is a trustworthy intermediary that connects buyers and providers from all over the world. Our service warrants a hassle-free custom clearance process that guarantees your purchase(s) to be delivered directly to the doorstep. Moreover, we consolidate all your orders together into a single shipment,  save your international shipping cost.</p>
+                    </div>
+                </div>  
+
+                <!--Try now-->
+                <div class="listCommitment">
+                    <div class="servicesButton">
+                        <a class="clickTrynow" href="http://weshop.com.vn/" target="_blank">TRY NOW</a>
+                    </div>                                  
+                </div>  
+
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+
+
+            </div>
+        </div>
+    </article>
+    <div id="mainHeader" class="headerAbout">   
+        <h1 id="titleHeader" class="titleHeader">Services</h1>
+        <nav id="subNavi">
+            <ul id="subNaviItems">
+                <li class="liSub"><a onclick="GoToHomePage()" href="javascript:void(0)">Home</a></li>
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub"><a href="services.html">Services</a></li> 
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub"><a href="servicesE-commerce.html">E-Commerce</a></li> 
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub active"><a class="active" href="servicesWebshop.html">Weshop.vn</a></li> 
+            </ul>
+        </nav>
+    </div>
+</div>
+<script type="text/javascript">
+    $(".trigger").click(function () {
+        var spanToToggle = $($(this).find("a").attr('href'));
+        $(".toggle:visible").not(spanToToggle).hide();
+        spanToToggle.slideToggle();
+    });
+</script>
 <div id="infoDescription">
     <div id="infoDsc">
         <div id="infoFull">
