--- a/structureSoftpay.html
+++ b/structureSoftpay.html
@@ -1,3 +1,159 @@
+<!doctype html>
+<html>
+
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+        <title>Nexttech</title>
+        <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+
+        <link type="text/css" href="css/awwwards.css" rel="stylesheet" />
+        <link type="text/css" href="css/fwa.css" rel="stylesheet" />
+        <link type="text/css" href="css/style.css" rel="stylesheet" />
+        <link type="text/css" href="css/selectric.css" rel="stylesheet" />
+        <link type="text/css" href="css/add.css" rel="stylesheet" />
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/remodal.css">
+        <link rel="stylesheet" href="css/remodal-default-theme.css">
+
+        <meta name="description" content="Next tech Outsource" />
+        <meta name="keywords" content="Chợ điện tử, Vimo, Ngân Lượng, Bảo Kim" />  
+        <meta property="og:title" content="Next tech | Out Source"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:description" content="Next tech Outsource"/>
+        <meta property="og:url" content="demo.mantanservices.com/next-tech/"/>
+        <meta property="og:site_name" content="Next tech | Out Source"/>
+        <meta property="og:image" content="http://i.imgur.com/RvPvSh9.png" /> 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+    </head>
+
+    <body>
+        <div id="overflowClosed">
+            <div id="scrollerDiv"></div>
+        </div>
+        <div id="bg">
+            <div id="grid"></div>
+        </div>
+        <div id="canvasPIXI"></div>
+        <div id="mainQuoteAll">
+            <div id="mainQuoteHidden">
+                <div id="mainQuote">
+                    <br></div>
+            </div>
+            <div id="secondQuote"></div>
+            <div id="lineQuote1" class="lineQuote"></div>
+            <div id="lineQuote2" class="lineQuote"></div>
+            <div id="lineQuote3" class="lineQuote"></div>
+
+        </div>
+<style>
+    #ofertaItem .menuOver {
+        visibility: inherit !important;
+        opacity: 1 !important;
+    }
+    #ofertaItem .menuOut {
+        transform: matrix3d(0, 0, -1, 0.004, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1) !important;
+    }
+</style>
+<script>var selectedTemplate = "quoteTextTMP";</script>  
+<div id="content"> 
+    <article id="mainArticle" class="mainAbout">
+        <div id="scrollingSection">
+            <div id="headerSection"><h2 id="titleHeader2" class="titleHeader2">"Our organization strives ceaselessly to reach a consensus"</h2></div>
+            <div id="fullText">            
+                <div class="center-image namestructure">
+                    <!--img src="images/peacesoftlogo.png" alt=""/>
+                    <br/-->
+                    <h2>Softpay intl'</h2>
+                </div>
+
+                <div class="structureTree">
+                    <div class="lineTop"></div>
+                    <div class="branching">
+                        <div class="leftLine"></div>
+                        <div class="centerLine"></div>
+                        <div class="rightLine"></div>
+                    </div>
+                    <div class="circleDot">
+                        <div class="leftCircle"></div>
+                        <div class="centerCircle"></div>
+                        <div class="rightCircle"></div>
+                    </div>
+                </div>
+
+                <div class="row structure">
+                    <!--div class='leftStructure'>
+                        <a href="peacesoftPeacetech.html">
+                            <div class="typestructure">
+                                <h3>Peacetech JSC</h3>
+                            </div>
+                            <br/>
+                            <br/>
+                            <div class='hoverclick'>
+                                <img src="images/addbutton/thirdadd-button.png" alt=''/>
+                            </div>
+                            <br/>
+                            <div class="liner lineStructure">
+                                <div class="circleLeft"></div>
+                                <div class="linerSpace"></div>
+                                <div class="circleRight"></div>
+                            </div>
+                        </a>
+                    </div-->
+                    <div class="centerStructure">
+                        <a href="peacesoftMpos.html">
+                            <div class="typestructure">
+                                <h3>MPOS</h3>
+                            </div>
+                            <br/>
+                            <br/>
+                            <div class='hoverclick'>
+                                <img src="images/addbutton/thirdadd-button.png" alt=''/>
+                            </div>
+                            <br/>
+                            <div class="liner lineStructure">
+                                <div class="circleLeft"></div>
+                                <div class="linerSpace"></div>
+                                <div class="circleRight"></div>
+                            </div>
+                        </a>
+                    </div>
+                    <!--div class="rightStructure">
+                        <a href="peacesoftShipchung.html">
+                            <div class="typestructure">
+                                <h3>Shipchung</h3>
+                            </div>
+                            <br/>
+                            <br/>
+                            <div class='hoverclick'>
+                                <img src="images/addbutton/thirdadd-button.png" alt=''/>
+                            </div>
+                            <br/>
+                            <div class="liner lineStructure">
+                                <div class="circleLeft"></div>
+                                <div class="linerSpace"></div>
+                                <div class="circleRight"></div>
+                            </div>
+                        </a>
+                    </div-->                    
+                </div>
+            </div>
+        </div>
+    </article>
+    <div id="mainHeader" class="headerAbout">   
+        <h1 id="titleHeader" class="titleHeader">Structure</h1>
+        <nav id="subNavi">
+            <ul id="subNaviItems">
+                <li class="liSub"><a onclick="GoToHomePage()" href="javascript:void(0)">Home</a></li>
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub"><a href="structure.html">Structure</a></li> 
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub active"><a class="active" href="structurePeacesoft.html">Softpay intl'</a></li>  
+            </ul>
+        </nav>
+    </div>
+</div>
 <div id="infoDescription">
     <div id="infoDsc">
         <div id="infoFull">
