--- a/aboutOpenletter.html
+++ b/aboutOpenletter.html
@@ -1,3 +1,168 @@
+<!doctype html>
+<html>
+
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+        <title>Nexttech</title>
+        <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+
+        <link type="text/css" href="css/awwwards.css" rel="stylesheet" />
+        <link type="text/css" href="css/fwa.css" rel="stylesheet" />
+        <link type="text/css" href="css/style.css" rel="stylesheet" />
+        <link type="text/css" href="css/selectric.css" rel="stylesheet" />
+        <link type="text/css" href="css/add.css" rel="stylesheet" />
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/remodal.css">
+        <link rel="stylesheet" href="css/remodal-default-theme.css">
+
+        <meta name="description" content="Next tech Outsource" />
+        <meta name="keywords" content="Chợ điện tử, Vimo, Ngân Lượng, Bảo Kim" />  
+        <meta property="og:title" content="Next tech | Out Source"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:description" content="Next tech Outsource"/>
+        <meta property="og:url" content="demo.mantanservices.com/next-tech/"/>
+        <meta property="og:site_name" content="Next tech | Out Source"/>
+        <meta property="og:image" content="http://i.imgur.com/RvPvSh9.png" /> 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+    </head>
+
+    <body>
+        <div id="overflowClosed">
+            <div id="scrollerDiv"></div>
+        </div>
+        <div id="bg">
+            <div id="grid"></div>
+        </div>
+        <div id="canvasPIXI"></div>
+        <div id="mainQuoteAll">
+            <div id="mainQuoteHidden">
+                <div id="mainQuote">
+                    <br></div>
+            </div>
+            <div id="secondQuote"></div>
+            <div id="lineQuote1" class="lineQuote"></div>
+            <div id="lineQuote2" class="lineQuote"></div>
+            <div id="lineQuote3" class="lineQuote"></div>
+
+        </div>
+<style>
+    #instytutItem .menuOver {
+        visibility: inherit !important;
+        opacity: 1 !important;
+    }
+    #instytutItem .menuOut {
+        transform: matrix3d(0, 0, -1, 0.004, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1) !important;
+    }
+</style>
+<script>var selectedTemplate = "quoteTextTMP";</script>  
+<div id="content">
+    <article id="mainArticle" class="mainAbout">   
+        <div id="scrollingSection">
+            <div id="headerSection">
+                <h2 id="titleHeader2" class="titleHeader2">
+                    Nguyen Hoa Binh 
+                    <span class="linexuyet">/</span>
+<!--                    <span class="spaceHeader" id="spaceHeaderM">/</span>-->
+                    <br/>
+                    Chairman - Nexttech Entrepreneurs Groups
+                </h2>
+            </div>
+            <div id="fullText">
+                <div id="quoteHeader2">
+                    <img src="images/chairman.png" alt="" title=""/>
+                </div>
+                <div id="mainText">
+                    <div class="liner quoteLine">
+                        <div class="circleLeft"></div>
+                        <div class="linerSpace"></div>
+                        <div class="circleRight"></div>
+                    </div>
+
+                    <p>
+                        Hanoi, April 15th 2016, according to 2015 e-Commerce report announced today by Vietnam e-Commerce 
+
+                        and Information Technology Agency (www.vecita.gov.vn), the first e-marketplace in the
+
+                        country since 2005 ChoDienTu.vn is ranked second largest e-Commerce website in sales revenue.
+
+                        This fact has shown that local e-Commerce players having unique strategy and in-depth local
+
+                        understanding can counter foreign giants, given much smaller funding.
+
+                        This news has marked the spectacular rerising of the earliest e-Marketplace in Vietnam since 2005
+
+                        and has been quite silent in recent few years. <br/><br/>To summarize on this achievement, Mr. Nguyen Hoa
+
+                        Binh, chairman for PeaceSoft-group owning ChoDienTu.vn said: “Facing the e-Commerce fever in
+
+                        the last few years whereas many deep pocketed players have been giving discount and promotion
+
+                        to buy growth, but then shutdown losing dozens millions USD investment because of inefficiency;
+
+                        ChoDienTu.vn has chosen in-depth strategy by silently investing infrastructure service to create
+
+                        long term values and improve quality of service for buyers and sellers”.
+
+                        Specifically, starting from just a single e-Marketplace 11 years ago, in the last 6 years PeaceSoft-
+
+                        group has grown into a multi-services ecosystem including NganLuong.vn online payment platform,
+
+                        eBay.vn cross border buying platform, ShipChung.vn shipping and cash-on-delivery platform,
+
+                        strategic partnership with the first warehousing and fulfilment platform BoxMe.vn… making
+
+                        customers to prioritize one-stop e-Commerce service on ChoDienTu.vn for their online buying and
+
+                        selling needs.<br/> <br/>“With this our so-called “people’s war” strategy, if Jack Ma is the crocodile in the
+
+                        Yangtze River then we will be a school of piranhas ready to fairly compete with Alibaba in Vietnam”,
+
+                        Mr.Binh confidently responded to interview question on the upcoming thread from Chinese e-Commerce 
+
+                        giant after their Lazada acquisition.
+
+                        ChoDienTu.vn is owned by PeaceTech joint stock company, a subsidiary of PeaceSoft-group joint
+
+                        venture with eBay and majority controlled by Vietnamese veteran technopreneurs. “For the last 11
+
+                        years total funding amount into ChoDienTu.vn was 50% less than the recently shutdown Deca.vn
+
+                        has spent for 2 years and 50 times less than currently number one e-Commerce website has spent
+
+                        for the last 4 years, that means e-Commerce does not absolutely require much money like someone
+
+                        has said while IDG’s project Lana was shutdown but firstly a team of people with in-depth local
+
+                        understanding”, Mr.Binh concluded./.
+                    </p>
+                    <br>
+                    <p>Best regards.</p>
+                    <p class="text-blue">NGUYEN HOA BINH</p>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+
+                </div>
+            </div>
+        </div>
+    </article>
+    <div id="mainHeader" class="headerAbout">   
+        <h1 id="titleHeader" class="titleHeader">ABOUT US</h1>
+        <nav id="subNavi">
+            <ul id="subNaviItems">
+                <li class="liSub"><a onclick="GoToHomePage()" href="javascript:void(0)">Home</a></li>
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub"><a  href="about.html">About us</a></li>
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub"><a class="active" href="aboutOpenletter.html">Open letter</a></li>
+            </ul>
+        </nav>
+    </div>
+</div>
 <div id="infoDescription">
     <div id="infoDsc">
         <div id="infoFull">
