--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,125 @@
+<!doctype html>
+<html>
+
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+        <title>Nexttech</title>
+        <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+
+        <link type="text/css" href="css/awwwards.css" rel="stylesheet" />
+        <link type="text/css" href="css/fwa.css" rel="stylesheet" />
+        <link type="text/css" href="css/style.css" rel="stylesheet" />
+        <link type="text/css" href="css/selectric.css" rel="stylesheet" />
+        <link type="text/css" href="css/add.css" rel="stylesheet" />
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/remodal.css">
+        <link rel="stylesheet" href="css/remodal-default-theme.css">
+
+        <meta name="description" content="Next tech Outsource" />
+        <meta name="keywords" content="Chợ điện tử, Vimo, Ngân Lượng, Bảo Kim" />  
+        <meta property="og:title" content="Next tech | Out Source"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:description" content="Next tech Outsource"/>
+        <meta property="og:url" content="demo.mantanservices.com/next-tech/"/>
+        <meta property="og:site_name" content="Next tech | Out Source"/>
+        <meta property="og:image" content="http://i.imgur.com/RvPvSh9.png" /> 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+    </head>
+
+    <body>
+        <div id="overflowClosed">
+            <div id="scrollerDiv"></div>
+        </div>
+        <div id="bg">
+            <div id="grid"></div>
+        </div>
+        <div id="canvasPIXI"></div>
+        <div id="mainQuoteAll">
+            <div id="mainQuoteHidden">
+                <div id="mainQuote">
+                    <br></div>
+            </div>
+            <div id="secondQuote"></div>
+            <div id="lineQuote1" class="lineQuote"></div>
+            <div id="lineQuote2" class="lineQuote"></div>
+            <div id="lineQuote3" class="lineQuote"></div>
+
+        </div>
+<style>
+    #kontaktItem .menuOver {
+        visibility: inherit !important;
+        opacity: 1 !important;
+    }
+    #kontaktItem .menuOut {
+        transform: matrix3d(0, 0, -1, 0.004, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1) !important;
+    }
+</style>
+<script>var selectedTemplate = "quoteTextTMP";</script>  
+<div id="content">
+    <article id="mainArticle" class="mainAbout">
+        <div id="scrollingSection">
+            <div id="headerSection"><h2 id="titleHeader2" class="titleHeader2">"We are looking forward to hearing from you."</h2></div>
+            <div id="fullText">            
+                <div class="formContent">
+                    <div id="formContact">
+                        <form class="" action="" method="post">
+                            <div class="newsName upper-text text-blue">
+                                <h3>/ Send the messenger</h3>
+                            </div>
+                            <div class="liner">
+                                <div class="circleLeft"></div>
+                                <div class="linerSpace"></div>
+                                <div class="circleRight"></div>
+                            </div>
+                            <textarea class="" rows="13" placeholder="your messenger..."></textarea>
+                            <div class="liner lineTextare">
+                                <div class="circleLeft"></div>
+                                <div class="linerSpace"></div>
+                                <div class="circleRight"></div>
+                            </div>
+                            <div class="email">
+                                <input type="email" class="" placeholder="your email..."/>
+                                <div class="liner lineEmail">
+                                    <div class="circleLeft"></div>
+                                    <div class="linerSpace"></div>
+                                    <div class="circleRight"></div>
+                                </div>
+                            </div>
+                            <button type="submit" class=""><img src="images/send.png" alt=""/></button>
+                        </form>
+                    </div>
+                    <div id="textContact">
+                        <div class="newsName upper-text text-blue">
+                            <h3>/ Address</h3>
+                        </div>
+                        <p class="companyName upper-text">NEXTTECH GROUP OF TECHNOPRENEURS</p>
+                        <address>
+                            <p>12A floor, VTC Online building, No. 18 Tam Trinh street, Hai Ba Trung district, Hanoi city, Vietnam.</p>
+                            <p><span class="text-blue">M.</span> (+84 4) 36320 986</p>
+                            <p><span class="text-blue">W.</span> <a href="#">www.nexttech.asia</a> / <a href="#">www.peacesoft.net</a></p>
+                            <p><span class="text-blue">E.</span> pr@peacesoft.net</p>
+                        </address>
+                    </div>
+
+                </div>    
+
+            </div>
+
+        </div>
+    </article>
+    <div id="mainHeader" class="headerAbout">   
+        <h1 id="titleHeader" class="titleHeader">Contact</h1>
+        <nav id="subNavi">
+            <ul id="subNaviItems">
+                <li class="liSub"><a onclick="GoToHomePage()" href="javascript:void(0)">Home</a></li>
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub active"><a class="active" href="contact.html">Contact</a></li>           
+            </ul>
+        </nav>
+    </div>
+</div>
 <div id="infoDescription">
     <div id="infoDsc">
         <div id="infoFull">
