--- a/peacesoftShipchung.html
+++ b/peacesoftShipchung.html
@@ -1,3 +1,119 @@
+<!doctype html>
+<html>
+
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+        <title>Nexttech</title>
+        <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+
+        <link type="text/css" href="css/awwwards.css" rel="stylesheet" />
+        <link type="text/css" href="css/fwa.css" rel="stylesheet" />
+        <link type="text/css" href="css/style.css" rel="stylesheet" />
+        <link type="text/css" href="css/selectric.css" rel="stylesheet" />
+        <link type="text/css" href="css/add.css" rel="stylesheet" />
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/remodal.css">
+        <link rel="stylesheet" href="css/remodal-default-theme.css">
+
+        <meta name="description" content="Next tech Outsource" />
+        <meta name="keywords" content="Chợ điện tử, Vimo, Ngân Lượng, Bảo Kim" />  
+        <meta property="og:title" content="Next tech | Out Source"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:description" content="Next tech Outsource"/>
+        <meta property="og:url" content="demo.mantanservices.com/next-tech/"/>
+        <meta property="og:site_name" content="Next tech | Out Source"/>
+        <meta property="og:image" content="http://i.imgur.com/RvPvSh9.png" /> 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+    </head>
+
+    <body>
+        <div id="overflowClosed">
+            <div id="scrollerDiv"></div>
+        </div>
+        <div id="bg">
+            <div id="grid"></div>
+        </div>
+        <div id="canvasPIXI"></div>
+        <div id="mainQuoteAll">
+            <div id="mainQuoteHidden">
+                <div id="mainQuote">
+                    <br></div>
+            </div>
+            <div id="secondQuote"></div>
+            <div id="lineQuote1" class="lineQuote"></div>
+            <div id="lineQuote2" class="lineQuote"></div>
+            <div id="lineQuote3" class="lineQuote"></div>
+
+        </div>
+<style>
+    #ofertaItem .menuOver {
+        visibility: inherit !important;
+        opacity: 1 !important;
+    }
+    #ofertaItem .menuOut {
+        transform: matrix3d(0, 0, -1, 0.004, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1) !important;
+    }
+</style>
+<script>var selectedTemplate = "quoteTextTMP";</script>  
+<div id="content">
+    <article id="mainArticle" class="mainAbout">
+        <div id="scrollingSection">
+            <!--div id="headerSection">
+                <h2 id="titleHeader2" class="titleHeader2">"Lorem Ipsum is simply dummy text of printing"</h2>
+            </div-->
+            <div id="fullText">            
+                <h4 class="text-blue upper-text peacesoftname">Shipchung JSc</h4>
+                <div class="peacesoftcontent">
+                    <h4 class="peacesofttitle text-blue">1. Introduction</h4>
+
+                    <p >
+                        - Name: ShipChung Joint Stock Company <br/>
+                        - Established year: 2012<br/>
+                        - Chairman CEO: Mr. Nguyen Hoa Binh
+                    </p>
+                </div>
+                <div class="peacesoftcontent">
+                    <h4 class="peacesofttitle text-blue">2. Services</h4>
+                    <p>Shipchung is aspiring company having mission to supply one stop solution for all shipping worries as shipping, insurances, Cash-On-Delivery (COD). We proudly provide cost-effective and professional service to all online merchants and couriers. Company helps to end up in frustration and serious problems while shopping and transporting goods, you will totally get peace of mind shopping .</p>
+                </div>
+                <div class="peacesoftcontent">
+                    <h4 class="peacesofttitle text-blue">3. Partner</h4>
+                    <p class="peacesoftcontent">
+                        Vietnam Post</p>
+                    <p class="peacesoftcontent">
+                        Viettel Post
+                    </p>
+                    <p class="peacesoftcontent">
+                        Kerry Express
+                    </p>
+                    <p class="peacesoftcontent">
+                        Netco
+                    </p>
+                    EMS
+                    <p class="peacesoftcontent">
+                        Nasco
+                    </p>
+                </div>
+            </div>
+        </div>
+    </article>
+    <div id="mainHeader" class="headerAbout">   
+        <h1 id="titleHeader" class="titleHeader">Structure</h1>
+        <nav id="subNavi">
+            <ul id="subNaviItems">
+                <li class="liSub"><a onclick="GoToHomePage()" href="javascript:void(0)">Home</a></li>
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub"><a href="structure.html">Structure</a></li> 
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub"><a href="structurePeacesoft.html">PeaceSoft Group</a></li> 
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub active"><a class="active" href="structureShipchung.html">Peacesoft Shipchung</a></li> 
+            </ul>
+        </nav>
+    </div>
+</div>
 <div id="infoDescription">
     <div id="infoDsc">
         <div id="infoFull">
@@ -440,3 +556,4 @@
 
 </body>
 </html>
+
