--- a/peacesoftWeshop.html
+++ b/peacesoftWeshop.html
@@ -1,3 +1,125 @@
+<!doctype html>
+<html>
+
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+        <title>Nexttech</title>
+        <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+
+        <link type="text/css" href="css/awwwards.css" rel="stylesheet" />
+        <link type="text/css" href="css/fwa.css" rel="stylesheet" />
+        <link type="text/css" href="css/style.css" rel="stylesheet" />
+        <link type="text/css" href="css/selectric.css" rel="stylesheet" />
+        <link type="text/css" href="css/add.css" rel="stylesheet" />
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/remodal.css">
+        <link rel="stylesheet" href="css/remodal-default-theme.css">
+
+        <meta name="description" content="Next tech Outsource" />
+        <meta name="keywords" content="Chợ điện tử, Vimo, Ngân Lượng, Bảo Kim" />  
+        <meta property="og:title" content="Next tech | Out Source"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:description" content="Next tech Outsource"/>
+        <meta property="og:url" content="demo.mantanservices.com/next-tech/"/>
+        <meta property="og:site_name" content="Next tech | Out Source"/>
+        <meta property="og:image" content="http://i.imgur.com/RvPvSh9.png" /> 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+    </head>
+
+    <body>
+        <div id="overflowClosed">
+            <div id="scrollerDiv"></div>
+        </div>
+        <div id="bg">
+            <div id="grid"></div>
+        </div>
+        <div id="canvasPIXI"></div>
+        <div id="mainQuoteAll">
+            <div id="mainQuoteHidden">
+                <div id="mainQuote">
+                    <br></div>
+            </div>
+            <div id="secondQuote"></div>
+            <div id="lineQuote1" class="lineQuote"></div>
+            <div id="lineQuote2" class="lineQuote"></div>
+            <div id="lineQuote3" class="lineQuote"></div>
+
+        </div>
+<style>
+    #ofertaItem .menuOver {
+        visibility: inherit !important;
+        opacity: 1 !important;
+    }
+    #ofertaItem .menuOut {
+        transform: matrix3d(0, 0, -1, 0.004, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1) !important;
+    }
+</style>
+<script>var selectedTemplate = "quoteTextTMP";</script>  
+<div id="content">
+    <article id="mainArticle" class="mainAbout">
+        <div id="scrollingSection">
+            <!--div id="headerSection">
+                <h2 id="titleHeader2" class="titleHeader2">"Lorem Ipsum is simply dummy text of printing"</h2>
+            </div-->
+            <div id="fullText">            
+                <h4 class="text-blue upper-text peacesoftname">Peacesoft Weshop</h4>
+                <div class="peacesoftcontent">
+                    <h4 class="peacesofttitle text-blue">1. Introduction</h4>
+
+                    <p >
+                        - Name: Weshop VietNam Electronic Commerce Joint Stock Company <br/>
+                        - Established year: 2016<br/>
+                        - Chairman CEO: Mr. Dao Van Ngoc
+                    </p>
+                </div>
+                <div class="peacesoftcontent">
+                    <h4 class="peacesofttitle text-blue">2. Services</h4>
+                    <p>Moving forwards the future, Weshop is a resulf of our attemps for the best niche. We research all the market and combine preeminient utilities in advanced technology, especially in e-commerce field. Weshop is committed to give you a totally new experience in cross border shopping for products in vairous areas such as fashion, houseware, health, sports, electronics from many other websites and nations. Moreover, we help you CROSS-BORDER shopping easily by supporting credit card, safe policies, consolidation packages. Your mission is just: Getting delivered goods in a couple of minutes. </p>
+                </div>
+                <div class="peacesoftcontent">
+                    <h4 class="peacesofttitle text-blue">3. Partner</h4>
+                    <p class="peacesoftcontent">
+                        Sourcing Partner
+                    </p>
+                    <p class="peacesoftcontent">
+                        eBay
+                    </p>
+                    <p class="peacesoftcontent">
+                        Amazone
+                    </p>
+                    <p class="peacesoftcontent">
+                        DHGate
+                    </p>
+                    <p class="peacesoftcontent">
+                        Sponsor Partner:
+                    </p>
+                    <p class="peacesoftcontent">
+                        Visa
+                    </p>
+                    <p class="peacesoftcontent">
+                        Master
+                    </p>
+                </div>
+            </div>
+        </div>
+    </article>
+    <div id="mainHeader" class="headerAbout">   
+        <h1 id="titleHeader" class="titleHeader">Structure</h1>
+        <nav id="subNavi">
+            <ul id="subNaviItems">
+                <li class="liSub"><a onclick="GoToHomePage()" href="javascript:void(0)">Home</a></li>
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub"><a href="structure.html">Structure</a></li>
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub active"><a class="active" href="structurePeacesoft.html">Weshop intl'</a></li>
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub active"><a class="active" href="peacesoftWeshop.html">Weshop</a></li>
+            </ul>
+        </nav>
+    </div>
+</div>
 <div id="infoDescription">
     <div id="infoDsc">
         <div id="infoFull">
@@ -440,3 +562,4 @@
 
 </body>
 </html>
+
