--- a/people.html
+++ b/people.html
@@ -1,3 +1,122 @@
+<!doctype html>
+<html>
+
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+        <title>Nexttech</title>
+        <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+
+        <link type="text/css" href="css/awwwards.css" rel="stylesheet" />
+        <link type="text/css" href="css/fwa.css" rel="stylesheet" />
+        <link type="text/css" href="css/style.css" rel="stylesheet" />
+        <link type="text/css" href="css/selectric.css" rel="stylesheet" />
+        <link type="text/css" href="css/add.css" rel="stylesheet" />
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/remodal.css">
+        <link rel="stylesheet" href="css/remodal-default-theme.css">
+
+        <meta name="description" content="Next tech Outsource" />
+        <meta name="keywords" content="Chợ điện tử, Vimo, Ngân Lượng, Bảo Kim" />  
+        <meta property="og:title" content="Next tech | Out Source"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:description" content="Next tech Outsource"/>
+        <meta property="og:url" content="demo.mantanservices.com/next-tech/"/>
+        <meta property="og:site_name" content="Next tech | Out Source"/>
+        <meta property="og:image" content="http://i.imgur.com/RvPvSh9.png" /> 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+    </head>
+
+    <body>
+        <div id="overflowClosed">
+            <div id="scrollerDiv"></div>
+        </div>
+        <div id="bg">
+            <div id="grid"></div>
+        </div>
+        <div id="canvasPIXI"></div>
+        <div id="mainQuoteAll">
+            <div id="mainQuoteHidden">
+                <div id="mainQuote">
+                    <br></div>
+            </div>
+            <div id="secondQuote"></div>
+            <div id="lineQuote1" class="lineQuote"></div>
+            <div id="lineQuote2" class="lineQuote"></div>
+            <div id="lineQuote3" class="lineQuote"></div>
+
+        </div>
+<style>
+    #inicjatywyItem .menuOver {
+        visibility: inherit !important;
+        opacity: 1 !important;
+    }
+    #inicjatywyItem .menuOut {
+        transform: matrix3d(0, 0, -1, 0.004, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1) !important;
+    }
+</style>
+<script>var selectedTemplate = "quoteTextTMP";</script> 
+<div id="content">
+    <article id="mainArticle" class="mainAbout">
+        <div id="scrollingSection">
+            <div id="headerSection">
+                <h2 id="titleHeader2" class="titleHeader2">"Let us do the heavy lifting for you."</h2>
+            </div>
+            <div id="fullText">
+                <div class="listPeople listAbout">
+                    <div class="leftAbout">
+                        <a href="peopleOurDNA.html">
+                            <div class="typeAbout">
+                                <h3>Our DNA</h3>
+                            </div>
+                            <br/>
+                            <br/>
+                            <div class="hoverAbout">
+                                <img src="images/addbutton/thirdadd-button.png" alt="">
+                            </div>
+                            <br/>
+                            <div class="borderAbout">
+                                <div class="circleLeft"></div>
+                                <div class="shortLineLeft"></div>
+                                <div class="shortLineRight"></div>
+                                <div class="circleRight"></div>                           
+                            </div>
+                        </a>
+                    </div>
+                    <div class="centerAbout">
+                        <a href="peopleTreatmentSystem.html">
+                            <div class="typeAbout">
+                                <h3>Treatment system</h3>
+                            </div>
+                            <br/>
+                            <br/>
+                            <div class="hoverAbout"><img src="images/addbutton/thirdadd-button.png" alt=""></div>
+                            <br/>
+                            <div class="borderAbout">
+                                <div class="circleLeft"></div>
+                                <div class="shortLineLeft"></div>
+                                <div class="shortLineRight"></div>
+                                <div class="circleRight"></div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </article>
+    <div id="mainHeader" class="headerAbout">   
+        <h1 id="titleHeader" class="titleHeader">People</h1>
+        <nav id="subNavi">
+            <ul id="subNaviItems">
+                <li class="liSub"><a onclick="GoToHomePage()" href="javascript:void(0)">Home</a></li>
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub active"><a class="active" href="people.html">People</a></li>           
+            </ul>
+        </nav>
+    </div>
+
+</div>
 <div id="infoDescription">
     <div id="infoDsc">
         <div id="infoFull">
