--- a/peopleTreatmentSystem.html
+++ b/peopleTreatmentSystem.html
@@ -1,3 +1,221 @@
+<!doctype html>
+<html>
+
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+        <title>Nexttech</title>
+        <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+
+        <link type="text/css" href="css/awwwards.css" rel="stylesheet" />
+        <link type="text/css" href="css/fwa.css" rel="stylesheet" />
+        <link type="text/css" href="css/style.css" rel="stylesheet" />
+        <link type="text/css" href="css/selectric.css" rel="stylesheet" />
+        <link type="text/css" href="css/add.css" rel="stylesheet" />
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/remodal.css">
+        <link rel="stylesheet" href="css/remodal-default-theme.css">
+
+        <meta name="description" content="Next tech Outsource" />
+        <meta name="keywords" content="Chợ điện tử, Vimo, Ngân Lượng, Bảo Kim" />  
+        <meta property="og:title" content="Next tech | Out Source"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:description" content="Next tech Outsource"/>
+        <meta property="og:url" content="demo.mantanservices.com/next-tech/"/>
+        <meta property="og:site_name" content="Next tech | Out Source"/>
+        <meta property="og:image" content="http://i.imgur.com/RvPvSh9.png" /> 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+    </head>
+
+    <body>
+        <div id="overflowClosed">
+            <div id="scrollerDiv"></div>
+        </div>
+        <div id="bg">
+            <div id="grid"></div>
+        </div>
+        <div id="canvasPIXI"></div>
+        <div id="mainQuoteAll">
+            <div id="mainQuoteHidden">
+                <div id="mainQuote">
+                    <br></div>
+            </div>
+            <div id="secondQuote"></div>
+            <div id="lineQuote1" class="lineQuote"></div>
+            <div id="lineQuote2" class="lineQuote"></div>
+            <div id="lineQuote3" class="lineQuote"></div>
+
+        </div>
+<style>
+    #inicjatywyItem .menuOver {
+        visibility: inherit !important;
+        opacity: 1 !important;
+    }
+    #inicjatywyItem .menuOut {
+        transform: matrix3d(0, 0, -1, 0.004, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1) !important;
+    }
+</style>
+<script>var selectedTemplate = "quoteTextTMP";</script>  
+<div id="content">
+    <article id="mainArticle" class="mainAbout">
+        <div id="scrollingSection">
+            <div id="headerSection">
+                <h2 id="titleHeader2" class="titleHeader2">"Little is not a problem, but unfair is."</h2>
+            </div>
+            <div id="fullText">
+                <div class="center-image"><img src="images/logopeoplegrowth.png" alt=""/></div>
+                <div class="about-content">
+                    <h4 class="text-blue upper-text peacesoftname">1. People growth</h4>
+
+                    <div class="peopleGrowth">
+                        <div class="peopleRow">
+                            <div class="peopleStart"></div>
+                            <div class="peopleLineFirst"></div>
+                            <div class="itemPeopleRow">
+                                <div class="imgItem"><img src="images/timely.png" alt=""/></div>
+                                <div class="circlePeople"></div>
+                                <div class="peopleInfo">
+                                    <p>timely</p>
+                                    <p class="upper-text text-blue">Recruit</p>
+                                </div>
+                            </div>
+                            <div class="itemPeopleRow">
+                                <div class="imgItem"><img src="images/compre.png" alt=""/></div>
+                                <div class="circlePeople"></div>
+                                <div class="peopleInfo">
+                                    <p>comprehensively</p>
+                                    <p class="upper-text text-blue">Train</p>
+                                </div>
+                            </div>
+                            <div class="itemPeopleRow">
+                                <div class="imgItem"><img src="images/effic.png" alt=""/></div>
+                                <div class="circlePeople"></div>
+                                <div class="peopleInfo">
+                                    <p>efficiently</p>
+                                    <p class="upper-text text-blue">Manage</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="rightBorderPeople"></div>
+
+                        <div class="peopleRow">                        
+                            <div class="peopleLine"></div>
+                            <div class="itemPeopleRow">
+                                <div class="imgItem specialImage"><img src="images/clearly.png" alt=""/></div>
+                                <div class="circlePeople"></div>
+                                <div class="peopleInfo">
+                                    <p>clearly</p>
+                                    <p class="upper-text text-blue">Communicate</p>
+                                </div>
+                            </div>
+                            <div class="itemPeopleRow">
+                                <div class="imgItem"><img src="images/well.png" alt=""/></div>
+                                <div class="circlePeople"></div>
+                                <div class="peopleInfo">
+                                    <p>well</p>
+                                    <p class="upper-text text-blue">Care</p>
+                                </div>
+                            </div>
+                            <div class="itemPeopleRow">
+                                <div class="imgItem"><img src="images/evaluate.png" alt=""/></div>
+                                <div class="circlePeople"></div>
+                                <div class="peopleInfo">
+                                    <p>rightly</p>
+                                    <p class="upper-text text-blue">evaluate</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="leftBorderPeople"></div>
+
+                        <div class="peopleRow">                        
+                            <div class="peopleShortLine"></div>
+                            <div class="arrowEndPeople"><img src="images/arrowEndPeople.png" alt=""></div>
+                            <div class="itemPeopleRow"></div>
+                            <div class="itemPeopleRow">
+                                <div class="imgItem"><img src="images/fairly.png" alt=""/></div>
+                                <div class="peopleInfo">
+                                    <p>fairly</p>
+                                    <p class="upper-text text-blue">Benefit</p>
+                                </div>
+                            </div>
+                            <div class="itemPeopleRow"></div>
+                        </div>
+                    </div>
+
+                    <h4 class="text-blue upper-text peacesoftname">2. Compensation Pyramid</h4>
+                    <br/>
+                    <br/>
+
+                    <div class="compensation servicesDistance">
+                        <div class="comp-same">
+                            <div class="shortlineLeft lineMargin"><img src="images/lineshort.png" alt=""/></div>
+                            <div class="balance"><img src="images/balance2.png" alt=""/></div>
+                        </div>
+
+                        <div class="comp-same">
+                            <div class="longlineLeft lineMargin"><img src="images/longline.png" alt=""/></div>
+                            <div class="longlineRight lineMargin"><img src="images/longline.png" alt=""/></div>
+                            <div class="circleadd"><img src="images/circleadd2.png" alt=""/></div>                        
+                        </div>
+
+                        <div class="comp-same">
+                            <div class="shortlineRight lineMargin"><img src="images/lineshort.png" alt=""/></div>
+                            <div class="triangular"><img src="images/triangular2.png" alt=""/></div>
+
+                        </div>
+                    </div>     
+
+
+
+
+                    <div class="compensation">
+                        <div class="comp-same">
+                            <h5 class="peacesofttitle text-blue">Share</h5>
+                            <p>Direct contributors earn direct share at subsidiary level. Others earn indirect share at fund management company.</p>
+                            <div class="standline">
+                                <img src="images/standline.png" alt="">
+                            </div>
+                        </div>
+
+                        <div class="comp-same">
+                            <h5 class="peacesofttitle text-blue">Bonus</h5>
+                            <p>Distribute partly at subsidiary level. Contribute partly upstairs for redistri-bution. Factor to consider: stage of development &amp; P/L</p>
+                            <div class="standline">
+                                <img src="images/standline.png" alt="">
+                            </div>
+                        </div>
+
+                        <div class="comp-same">
+                            <h5 class="peacesofttitle text-blue">Salary</h5>
+                            <p>ONE basic pay scheme across con-glomerate. Subsidiary may have its own allowance. Factors to consider: country, on assingment ...</p>                   
+                        </div>
+                    </div>               
+                </div>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+            </div>
+        </div>
+    </article>
+    <div id="mainHeader" class="headerAbout">   
+        <h1 id="titleHeader" class="titleHeader">People</h1>
+        <nav id="subNavi">
+            <ul id="subNaviItems">
+                <li class="liSub"><a onclick="GoToHomePage()" href="javascript:void(0)">Home</a></li>
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub"><a  href="people.html">People</a></li>
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub active"><a  class="active" href="peopleTreatmentSystem.html">Treatment System</a></li>
+            </ul>
+        </nav>
+    </div>
+</div>
 <div id="infoDescription">
     <div id="infoDsc">
         <div id="infoFull">
