--- a/servicesBoxme.html
+++ b/servicesBoxme.html
@@ -1,3 +1,212 @@
+<!doctype html>
+<html>
+
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+        <title>Nexttech</title>
+        <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+
+        <link type="text/css" href="css/awwwards.css" rel="stylesheet" />
+        <link type="text/css" href="css/fwa.css" rel="stylesheet" />
+        <link type="text/css" href="css/style.css" rel="stylesheet" />
+        <link type="text/css" href="css/selectric.css" rel="stylesheet" />
+        <link type="text/css" href="css/add.css" rel="stylesheet" />
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/remodal.css">
+        <link rel="stylesheet" href="css/remodal-default-theme.css">
+
+        <meta name="description" content="Next tech Outsource" />
+        <meta name="keywords" content="Chợ điện tử, Vimo, Ngân Lượng, Bảo Kim" />  
+        <meta property="og:title" content="Next tech | Out Source"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:description" content="Next tech Outsource"/>
+        <meta property="og:url" content="demo.mantanservices.com/next-tech/"/>
+        <meta property="og:site_name" content="Next tech | Out Source"/>
+        <meta property="og:image" content="http://i.imgur.com/RvPvSh9.png" /> 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+    </head>
+
+    <body>
+        <div id="overflowClosed">
+            <div id="scrollerDiv"></div>
+        </div>
+        <div id="bg">
+            <div id="grid"></div>
+        </div>
+        <div id="canvasPIXI"></div>
+        <div id="mainQuoteAll">
+            <div id="mainQuoteHidden">
+                <div id="mainQuote">
+                    <br></div>
+            </div>
+            <div id="secondQuote"></div>
+            <div id="lineQuote1" class="lineQuote"></div>
+            <div id="lineQuote2" class="lineQuote"></div>
+            <div id="lineQuote3" class="lineQuote"></div>
+
+        </div>
+<style>
+    #ofertaItem2 .menuOver {
+        visibility: inherit !important;
+        opacity: 1 !important;
+    }
+    #ofertaItem2 .menuOut {
+        transform: matrix3d(0, 0, -1, 0.004, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1) !important;
+    }
+</style>
+<script>var selectedTemplate = "quoteTextTMP";</script>  
+<div id="content">
+    <article id="mainArticle" class="mainAbout">
+        <div id="scrollingSection">
+            <div id="fullText" class="responPadding">
+                <div class="servicestitle">
+                    <span class="servicelogo"><img src="images/service-boxme.png" alt=""/></span>
+                    <span class="servicelink">
+                        <a href="http://www.boxme.vn/" target="_blank">www.boxme.vn <img src="images/arrow.png" alt=""/></a>
+                    </span>
+                </div>
+
+                <h4 class="text-blue upper-text peacesoftname serviceBreak">1. who we are</h4>
+
+                <p class="peacesoftcontent">
+                    Our strategety is exceptional cuz of beginning right direction to customer service. We always drive the customers toward the best thing because we understand: besides the technology, people play an important part in process that guarantees a smooth operation. People are always there for you … and your customers at BoxMe. Our fulfillment company becomes an extension of your own company’s excellence and aspirations to build a contingency of satisfied, repeat customers.
+                    We believe that our strong operational expertise coupled with a passion for customer service enhances our proposition and allow us to provide a service that exceeds what is provided in the market today. </p>
+
+                <h4 class="text-blue upper-text peacesoftname serviceBreak">2. our feature</h4>
+
+                <div class="compensation servicesDistance">
+                    <div class="comp-same">
+                        <div class="shortlineLeft"><img src="images/lineshort.png" alt=""/></div>
+                        <div class="balance"><img src="images/balance.png" alt=""/></div>
+                    </div>
+
+                    <div class="comp-same">
+                        <div class="longlineLeft"><img src="images/longline.png" alt=""/></div>
+                        <div class="longlineRight"><img src="images/longline.png" alt=""/></div>
+                        <div class="circleadd"><img src="images/circleadd.png" alt=""/></div>                        
+                    </div>
+
+                    <div class="comp-same">
+                        <div class="shortlineRight"><img src="images/lineshort.png" alt=""/></div>
+                        <div class="triangular"><img src="images/triangular.png" alt=""/></div>
+
+                    </div>
+                </div>   
+
+                <div class="compensation">
+                    <div class="comp-same">
+                        <h5 class="peacesofttitle text-blue">People</h5>
+                        <p> Our team has extensive experience in the markets we service – direct response, mail order, promotions & retail</p>
+                        <div class="standline">
+                            <img src="images/standline.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="comp-same">
+                        <h5 class="peacesofttitle text-blue">Process</h5>
+                        <p>We have the technological systems and processes to make your order fulfillment as fast, accurate, secure and easy as possible.</p>
+                        <div class="standline">
+                            <img src="images/standline.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="comp-same">
+                        <h5 class="peacesofttitle text-blue">Product</h5>
+                        <p>We are ceaselessly yearning for making the advanced product to serve customer's needs.</p>
+                    </div>
+                </div>
+                <br/>
+                <br/>
+
+                <h4 class="text-blue upper-text peacesoftname serviceBreak">3. our commitment</h4>
+
+                <!--Commitment1-->
+                <div class="listCommitment">
+                    <div class="leftCommitment">
+                        <div class="circleLeft dotTimelineServices"></div>
+                        <p class="nameCommitment"> Innovative Business</p>
+                    </div>
+                    <div class="rightCommitment">  
+                        <div class="servicesExpand  trigger">
+                            <a class="removeSpace" href="#content1"><img src="images/addbutton/thirdadd-button.png" alt=""></a>                              
+                        </div>
+                        <p class="textCommitment">Provide fulfillment service for All Small, mid-size, and large businesses in Vietnam outsource </p>
+                    </div>
+                </div>            
+
+                <!--Commitment2-->
+                <div class="listCommitment">
+                    <div class="leftCommitment">
+                        <p class="nameCommitment">Preeminent Service</p>
+                    </div>
+                    <div class="rightCommitment">
+                        <!--                    <div class="servicesExpand  trigger">
+                                                <a class="removeSpace" href="#content2"><img src="images/addbutton/thirdadd-button.png" alt=""></a>                              
+                                            </div>-->
+                        <p class="textCommitment">We give them the leverage of state of the art facilities, technology, and systems along with excellent customer service that represent them well. To facilitate your shopping online, we provide a complete end to end service which includes the payment processing gateway, packaging, assembly, third party logistics (3PL), storage, pick & pack, distribution and real time online reporting</p>
+                    </div>
+                </div>            
+
+                <!--Commitment3--
+                <div class="listCommitment">
+                    <div class="leftCommitment">
+                        <p class="nameCommitment">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                    </div>
+                    <div class="rightCommitment">
+                        <div class="servicesButton">
+                            <a class="clickTrynow" href="#" target="_blank">TRY NOW</a>
+                        </div>
+                        <p class="textCommitment">And typesetting Industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer tookj a gelley of type
+                            and scrambled it to make a type speclmen book. It has suvived not only five centuries, but also the leap into electronic typesetting, remaining essen-tially unchanged. It was popularised in the 1960s
+                                with the release of Leatraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker Including versions of Lorem Ipsum.
+                        </p>
+                    </div>
+                </div-->
+
+                <!--Try now-->
+                <div class="listCommitment">
+                    <div class="servicesButton">
+                        <a class="clickTrynow" href="http://www.boxme.vn/" target="_blank">TRY NOW</a>
+                    </div>                                  
+                </div>  
+
+
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+
+            </div>
+        </div>
+    </article>
+    <div id="mainHeader" class="headerAbout">   
+        <h1 id="titleHeader" class="titleHeader">Services</h1>
+        <nav id="subNavi">
+            <ul id="subNaviItems">
+                <li class="liSub"><a onclick="GoToHomePage()" href="javascript:void(0)">Home</a></li>
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub"><a href="services.html">Services</a></li> 
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub"><a href="servicesE-logistic.html">E-logistic</a></li> 
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub active"><a class="active" href="servicesBoxme.html">Boxme.vn</a></li> 
+            </ul>
+        </nav>
+    </div>
+</div>
+<script type="text/javascript">
+    $(".trigger").click(function () {
+        var spanToToggle = $($(this).find("a").attr('href'));
+        $(".toggle:visible").not(spanToToggle).hide();
+        spanToToggle.slideToggle();
+    });
+</script>
 <div id="infoDescription">
     <div id="infoDsc">
         <div id="infoFull">
