--- a/servicesMpos.html
+++ b/servicesMpos.html
@@ -1,3 +1,207 @@
+<!doctype html>
+<html>
+
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+        <title>Nexttech</title>
+        <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+
+        <link type="text/css" href="css/awwwards.css" rel="stylesheet" />
+        <link type="text/css" href="css/fwa.css" rel="stylesheet" />
+        <link type="text/css" href="css/style.css" rel="stylesheet" />
+        <link type="text/css" href="css/selectric.css" rel="stylesheet" />
+        <link type="text/css" href="css/add.css" rel="stylesheet" />
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/remodal.css">
+        <link rel="stylesheet" href="css/remodal-default-theme.css">
+
+        <meta name="description" content="Next tech Outsource" />
+        <meta name="keywords" content="Chợ điện tử, Vimo, Ngân Lượng, Bảo Kim" />  
+        <meta property="og:title" content="Next tech | Out Source"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:description" content="Next tech Outsource"/>
+        <meta property="og:url" content="demo.mantanservices.com/next-tech/"/>
+        <meta property="og:site_name" content="Next tech | Out Source"/>
+        <meta property="og:image" content="http://i.imgur.com/RvPvSh9.png" /> 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+    </head>
+
+    <body>
+        <div id="overflowClosed">
+            <div id="scrollerDiv"></div>
+        </div>
+        <div id="bg">
+            <div id="grid"></div>
+        </div>
+        <div id="canvasPIXI"></div>
+        <div id="mainQuoteAll">
+            <div id="mainQuoteHidden">
+                <div id="mainQuote">
+                    <br></div>
+            </div>
+            <div id="secondQuote"></div>
+            <div id="lineQuote1" class="lineQuote"></div>
+            <div id="lineQuote2" class="lineQuote"></div>
+            <div id="lineQuote3" class="lineQuote"></div>
+
+        </div>
+<style>
+    #ofertaItem2 .menuOver {
+        visibility: inherit !important;
+        opacity: 1 !important;
+    }
+    #ofertaItem2 .menuOut {
+        transform: matrix3d(0, 0, -1, 0.004, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1) !important;
+    }
+</style>
+<script>var selectedTemplate = "quoteTextTMP";</script>  
+<div id="content">
+    <article id="mainArticle" class="mainAbout">
+        <div id="scrollingSection">
+            <div id="fullText" class="responPadding">
+                <div class="servicestitle">
+                    <span class="servicelogo"><img src="images/service-mpos.png" alt=""/></span>
+                    <span class="servicelink">
+                        <a href="https://www.mpos.vn/" target="_blank">www.mPos.vn <img src="images/arrow.png" alt=""/></a>
+                    </span>
+                </div>
+
+                <h4 class="text-blue upper-text peacesoftname serviceBreak">1. who we are</h4>
+
+                <p class="peacesoftcontent">
+                    mPOS.vn is the premier mPOS company and the leading Payment Facilitator company in Vietnam. We provide the Mobile Point of Sale (mPOS) solution which enables businesses and indivituals to accept card payments anywhere at anytime: credit cards (Visa, MasterCard, JCB…), debit cards, bank cards, loyalty cards etc. Our mPOS solution is highly secure and has achieved numerous certifications to give merchants and customers peace of mind when processing payments. It is highly proven with thousands of mPOS devices shipped and active today!
+                </p>
+
+                <h4 class="text-blue upper-text peacesoftname serviceBreak">2. our feature</h4>
+
+                <div class="compensation servicesDistance">
+                    <div class="comp-same">
+                        <div class="shortlineLeft"><img src="images/lineshort.png" alt=""/></div>
+                        <div class="balance"><img src="images/balance.png" alt=""/></div>
+                    </div>
+
+                    <div class="comp-same">
+                        <div class="longlineLeft"><img src="images/longline.png" alt=""/></div>
+                        <div class="longlineRight"><img src="images/longline.png" alt=""/></div>
+                        <div class="circleadd"><img src="images/circleadd.png" alt=""/></div>                        
+                    </div>
+
+                    <div class="comp-same">
+                        <div class="shortlineRight"><img src="images/lineshort.png" alt=""/></div>
+                        <div class="triangular"><img src="images/triangular.png" alt=""/></div>
+
+                    </div>
+                </div>   
+
+                <div class="compensation">
+                    <div class="comp-same">
+                        <h5 class="peacesofttitle text-blue">People</h5>
+                        <p>Our team is well-educated, young and professional. We are passionate about the quality, creativity and impact of our work to promote cashless payment in your business.</p>
+                        <div class="standline">
+                            <img src="images/standline.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="comp-same">
+                        <h5 class="peacesofttitle text-blue">Process</h5>
+                        <p>Our deployment process is not only the most convenient and fastest method but also is powerful and  being replacing traditional cash transactions.</p>
+                        <div class="standline">
+                            <img src="images/standline.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="comp-same">
+                        <h5 class="peacesofttitle text-blue">Product</h5>
+                        <p>Our mPOS solution helps all businesses/individuals to collect card payment. Mobile technology and cloud data enable your revenue management more effective.Besides we also provide an ecosystem such as Loyalty program (GoWow.mobi); Sale POS/Management system… for all mPOS merchants</p>
+                    </div>
+                </div>
+                <br/>
+                <br/>
+
+                <h4 class="text-blue upper-text peacesoftname serviceBreak">3. our commitment</h4>
+
+                <!--Commitment1-->
+                <div class="listCommitment">
+                    <div class="leftCommitment">
+                        <div class="circleLeft dotTimelineServices"></div>
+                        <p class="nameCommitment">We help your business to increase sales</p>
+                    </div>
+                    <div class="rightCommitment">  
+                        <div class="servicesExpand  trigger">
+                            <a class="removeSpace" href="#content1"><img src="images/addbutton/thirdadd-button.png" alt=""></a>                              
+                        </div>
+                        <p class="textCommitment">mPOS gives your business the ability to accept major credit cards such as VISA, Mastercard and even debit cards. Watch sales grow as customers prefer the convenience of card payments.
+                        </p>
+                    </div>
+                </div>            
+
+                <!--Commitment2-->
+                <div class="listCommitment">
+                    <div class="leftCommitment">
+                        <p class="nameCommitment">We help your transactions to be secure </p>
+                    </div>
+                    <div class="rightCommitment">
+                        <div class="servicesExpand  trigger">
+                            <a class="removeSpace" href="#content2"><img src="images/addbutton/thirdadd-button.png" alt=""></a>                              
+                        </div>
+                        <p class="textCommitment">mPOS.vn solution is highly secure and has received certification for VISA Ready, MasterCard mPOS Certified, JCB Certified, ChinaUnionPay, EMV Co Level 1 and 2, PCI-DSS, M-TIP, ADVT, etc.
+                        </p>
+                    </div>
+                </div>            
+
+                <!--Commitment3-->
+                <div class="listCommitment">
+                    <div class="leftCommitment">
+                        <p class="nameCommitment"> We empower your sales process with powerful tools</p>
+                    </div>
+                    <div class="rightCommitment">                  
+                        <p class="textCommitment">mPOS has a strong ecosystem such as: Loyalty program (GoWow.mobi) which helps buyers to get point for any transaction via mPOS merchants, exchange point to gift, </p>
+                    </div>
+                </div>            
+
+                <!--Try now-->
+                <div class="listCommitment">
+                    <div class="servicesButton">
+                        <a class="clickTrynow" href="https://www.mpos.vn/" target="_blank">TRY NOW</a>
+                    </div>                                  
+                </div>  
+
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+
+            </div>
+        </div>
+    </article>
+    <div id="mainHeader" class="headerAbout">   
+        <h1 id="titleHeader" class="titleHeader">Services</h1>
+        <nav id="subNavi">
+            <ul id="subNaviItems">
+                <li class="liSub"><a onclick="GoToHomePage()" href="javascript:void(0)">Home</a></li>
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub"><a href="services.html">Services</a></li> 
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub"><a href="servicesE-payment.html">E-Payment</a></li> 
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub active"><a class="active" href="servicesMpos.html">Mpos.vn</a></li> 
+            </ul>
+        </nav>
+    </div>
+</div>
+<script type="text/javascript">
+    $(".trigger").click(function () {
+        var spanToToggle = $($(this).find("a").attr('href'));
+        $(".toggle:visible").not(spanToToggle).hide();
+        spanToToggle.slideToggle();
+    });
+</script>
 <div id="infoDescription">
     <div id="infoDsc">
         <div id="infoFull">
