--- a/servicesShipchung.html
+++ b/servicesShipchung.html
@@ -1,3 +1,212 @@
+<!doctype html>
+<html>
+
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+        <title>Nexttech</title>
+        <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+
+        <link type="text/css" href="css/awwwards.css" rel="stylesheet" />
+        <link type="text/css" href="css/fwa.css" rel="stylesheet" />
+        <link type="text/css" href="css/style.css" rel="stylesheet" />
+        <link type="text/css" href="css/selectric.css" rel="stylesheet" />
+        <link type="text/css" href="css/add.css" rel="stylesheet" />
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/remodal.css">
+        <link rel="stylesheet" href="css/remodal-default-theme.css">
+
+        <meta name="description" content="Next tech Outsource" />
+        <meta name="keywords" content="Chợ điện tử, Vimo, Ngân Lượng, Bảo Kim" />  
+        <meta property="og:title" content="Next tech | Out Source"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:description" content="Next tech Outsource"/>
+        <meta property="og:url" content="demo.mantanservices.com/next-tech/"/>
+        <meta property="og:site_name" content="Next tech | Out Source"/>
+        <meta property="og:image" content="http://i.imgur.com/RvPvSh9.png" /> 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+    </head>
+
+    <body>
+        <div id="overflowClosed">
+            <div id="scrollerDiv"></div>
+        </div>
+        <div id="bg">
+            <div id="grid"></div>
+        </div>
+        <div id="canvasPIXI"></div>
+        <div id="mainQuoteAll">
+            <div id="mainQuoteHidden">
+                <div id="mainQuote">
+                    <br></div>
+            </div>
+            <div id="secondQuote"></div>
+            <div id="lineQuote1" class="lineQuote"></div>
+            <div id="lineQuote2" class="lineQuote"></div>
+            <div id="lineQuote3" class="lineQuote"></div>
+
+        </div>
+<style>
+    #ofertaItem2 .menuOver {
+        visibility: inherit !important;
+        opacity: 1 !important;
+    }
+    #ofertaItem2 .menuOut {
+        transform: matrix3d(0, 0, -1, 0.004, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1) !important;
+    }
+</style>
+<script>var selectedTemplate = "quoteTextTMP";</script>  
+<div id="content">
+    <article id="mainArticle" class="mainAbout">
+        <div id="scrollingSection">
+            <div id="fullText" class="responPadding">
+                <div class="servicestitle">
+                    <span class="servicelogo"><img src="images/service-shipchung.png" alt=""/></span>
+                    <span class="servicelink">
+                        <a href="https://www.shipchung.vn/" target="_blank">www.shipchung.vn <img src="images/arrow.png" alt=""/></a>
+                    </span>
+                </div>
+
+                <h4 class="text-blue upper-text peacesoftname serviceBreak">1. who we are</h4>
+
+                <p class="peacesoftcontent">
+                    ShipChung .,JSC, one of PeaceSoft Group’s Companies,  the first and only shipping gateway which connects online merchants to couriers. Founded in 2012 with purpose to solve the bottleneck of e-Commerce in Vietnam, after the first 2 years we have been succeeding partnership with 10 leading couriers as Vietnam Post, Viettel Post, Kerry Express, Netco, EMS, Nasco, etc with more than 50,000 registered accounts and approximately 120,000 orders per month. ShipChung simplifies shipping process for thousands of online merchants without contract. Clients also can track the journey of the consignment via SMS or directly in the website.
+                </p>
+
+                <h4 class="text-blue upper-text peacesoftname serviceBreak">2. our feature</h4>
+
+                <div class="compensation servicesDistance">
+                    <div class="comp-same">
+                        <div class="shortlineLeft"><img src="images/lineshort.png" alt=""/></div>
+                        <div class="balance"><img src="images/balance.png" alt=""/></div>
+                    </div>
+
+                    <div class="comp-same">
+                        <div class="longlineLeft"><img src="images/longline.png" alt=""/></div>
+                        <div class="longlineRight"><img src="images/longline.png" alt=""/></div>
+                        <div class="circleadd"><img src="images/circleadd.png" alt=""/></div>                        
+                    </div>
+
+                    <div class="comp-same">
+                        <div class="shortlineRight"><img src="images/lineshort.png" alt=""/></div>
+                        <div class="triangular"><img src="images/triangular.png" alt=""/></div>
+
+                    </div>
+                </div>   
+
+                <div class="compensation">
+                    <div class="comp-same">
+                        <h5 class="peacesofttitle text-blue">People</h5>
+                        <p>We get active and proficient teams that have been succeeding partnership with 10 leading couriers as Vietnam Post, Viettel Post, Kerry Express, Netco, EMS, Nasco, etc.</p>
+                        <div class="standline">
+                            <img src="images/standline.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="comp-same">
+                        <h5 class="peacesofttitle text-blue">Process</h5>
+                        <p>ShipChung simplifies shipping process for thousands of online merchants without contract.</p>
+                        <div class="standline">
+                            <img src="images/standline.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="comp-same">
+                        <h5 class="peacesofttitle text-blue">Product</h5>
+                        <p>We’ve been one of Vietnam’s leading E-commerce shipping solutions for online shoppers: shipping, insurances, Cash-On-Delivery (COD)</p>
+                    </div>
+                </div>
+                <br/>
+                <br/>
+
+                <h4 class="text-blue upper-text peacesoftname serviceBreak">3. our commitment</h4>
+
+                <!--Commitment1-->
+                <div class="listCommitment">
+                    <div class="leftCommitment">
+                        <div class="circleLeft dotTimelineServices"></div>
+                        <p class="nameCommitment">Big or small, we do it all</p>
+                    </div>
+                    <div class="rightCommitment">  
+                        <div class="servicesExpand  trigger">
+                            <a class="removeSpace" href="#content1"><img src="images/addbutton/thirdadd-button.png" alt=""></a>                              
+                        </div>
+                        <p class="textCommitment"> Whether you only ship a few orders or thousands per day, we will provide you a tailor-made solution that meets your requirements. </p>
+                    </div>
+                </div>            
+
+                <!--Commitment2-->
+                <div class="listCommitment">
+                    <div class="leftCommitment">
+                        <p class="nameCommitment"> Best team ever</p>
+                    </div>
+                    <div class="rightCommitment">
+                        <!--                    <div class="servicesExpand  trigger">
+                                                <a class="removeSpace" href="#content2"><img src="images/addbutton/thirdadd-button.png" alt=""></a>                              
+                                            </div>-->
+                        <p class="textCommitment">Our staff will ensure that each of your parcels gets the right treatment. We believe that our strong operational expertise coupled with a passion for customer service enhances our proposition and allow us to provide a service that exceeds what is provided in the market today. </p>
+                    </div>
+                </div>            
+
+                <!--Commitment3--
+                <div class="listCommitment">
+                    <div class="leftCommitment">
+                        <p class="nameCommitment">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                    </div>
+                    <div class="rightCommitment">
+                        <div class="servicesButton">
+                            <a class="clickTrynow" href="#" target="_blank">TRY NOW</a>
+                        </div>
+                        <p class="textCommitment">And typesetting Industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer tookj a gelley of type
+                            and scrambled it to make a type speclmen book. It has suvived not only five centuries, but also the leap into electronic typesetting, remaining essen-tially unchanged. It was popularised in the 1960s
+                                with the release of Leatraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker Including versions of Lorem Ipsum.
+                        </p>
+                    </div>
+                </div-->
+
+                <!--Try now-->
+                <div class="listCommitment">
+                    <div class="servicesButton">
+                        <a class="clickTrynow" href="https://www.shipchung.vn/" target="_blank">TRY NOW</a>
+                    </div>                                  
+                </div>  
+
+
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+
+            </div>
+        </div>
+    </article>
+    <div id="mainHeader" class="headerAbout">   
+        <h1 id="titleHeader" class="titleHeader">Services</h1>
+        <nav id="subNavi">
+            <ul id="subNaviItems">
+                <li class="liSub"><a onclick="GoToHomePage()" href="javascript:void(0)">Home</a></li>
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub"><a href="services.html">Services</a></li> 
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub"><a href="servicesE-logistic.html">E-logistic</a></li> 
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub active"><a class="active" href="servicesShipchung.html">Shipchung.vn</a></li> 
+            </ul>
+        </nav>
+    </div>
+</div>
+<script type="text/javascript">
+    $(".trigger").click(function () {
+        var spanToToggle = $($(this).find("a").attr('href'));
+        $(".toggle:visible").not(spanToToggle).hide();
+        spanToToggle.slideToggle();
+    });
+</script>
 <div id="infoDescription">
     <div id="infoDsc">
         <div id="infoFull">
