--- a/structureBoxme.html
+++ b/structureBoxme.html
@@ -1,3 +1,124 @@
+<!doctype html>
+<html>
+
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+        <title>Nexttech</title>
+        <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+
+        <link type="text/css" href="css/awwwards.css" rel="stylesheet" />
+        <link type="text/css" href="css/fwa.css" rel="stylesheet" />
+        <link type="text/css" href="css/style.css" rel="stylesheet" />
+        <link type="text/css" href="css/selectric.css" rel="stylesheet" />
+        <link type="text/css" href="css/add.css" rel="stylesheet" />
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/remodal.css">
+        <link rel="stylesheet" href="css/remodal-default-theme.css">
+
+        <meta name="description" content="Next tech Outsource" />
+        <meta name="keywords" content="Chợ điện tử, Vimo, Ngân Lượng, Bảo Kim" />  
+        <meta property="og:title" content="Next tech | Out Source"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:description" content="Next tech Outsource"/>
+        <meta property="og:url" content="demo.mantanservices.com/next-tech/"/>
+        <meta property="og:site_name" content="Next tech | Out Source"/>
+        <meta property="og:image" content="http://i.imgur.com/RvPvSh9.png" /> 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+    </head>
+
+    <body>
+        <div id="overflowClosed">
+            <div id="scrollerDiv"></div>
+        </div>
+        <div id="bg">
+            <div id="grid"></div>
+        </div>
+        <div id="canvasPIXI"></div>
+        <div id="mainQuoteAll">
+            <div id="mainQuoteHidden">
+                <div id="mainQuote">
+                    <br></div>
+            </div>
+            <div id="secondQuote"></div>
+            <div id="lineQuote1" class="lineQuote"></div>
+            <div id="lineQuote2" class="lineQuote"></div>
+            <div id="lineQuote3" class="lineQuote"></div>
+
+        </div>
+<style>
+    #ofertaItem .menuOver {
+        visibility: inherit !important;
+        opacity: 1 !important;
+    }
+    #ofertaItem .menuOut {
+        transform: matrix3d(0, 0, -1, 0.004, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1) !important;
+    }
+</style>
+<script>var selectedTemplate = "quoteTextTMP";</script>  
+<div id="content">
+    <article id="mainArticle" class="mainAbout">    
+        <div id="scrollingSection">
+            <div id="headerSection"><h2 id="titleHeader2" class="titleHeader2">"As a business owner, we go abreast of the lastest development"</h2></div>
+            <div id="fullText">
+                <h4 class="text-blue upper-text peacesoftname">BoxMe</h4>
+                <div class="peacesoftcontent">
+                    <h4 class="peacesofttitle text-blue">1. Introduction</h4>
+
+                    <p >
+                        - Name: BoxMe VietNam Fulfillment Service Joint Stock Company <br/>
+                        - Established year: 2014<br/>
+                        - Chairman CEO: Mr. Nguyen Hoa Binh
+                    </p>
+                </div>
+                <div class="peacesoftcontent">
+                    <h4 class="peacesofttitle text-blue">2. Services</h4>
+                    <p>BoxMe exists to provide high quality service and logistics support that meet standards given. Our professional team who have technical expertise are ready responsive to customer's requirement. Understanding toughest projects and troubles than anybody, we strive to give smart economical solutions with quality and integrity that produces mission success.</p>
+                </div>
+                <div class="peacesoftcontent">
+                    <h4 class="peacesofttitle text-blue">3. Partner</h4>
+                    <p class="peacesoftcontent">
+                        Viettel Post
+                    </p>
+                    <p class="peacesoftcontent">
+                        Kerry Express
+                    </p>
+                    <p class="peacesoftcontent">
+                        EMS
+                    </p>
+                    <p class="peacesoftcontent">
+                        ShipChung.vn
+                    </p>
+                    <p class="peacesoftcontent">
+                        NganLuong.vn
+                    </p>
+                    <p class="peacesoftcontent">
+                        ChoDienTu.vn
+                    </p>
+                    <p class="peacesoftcontent">
+                        eBay.vn
+                    </p>
+                    <p class="peacesoftcontent">
+                        mPoS.vn
+                    </p>
+                </div>
+            </div>
+        </div>
+    </article>
+    <div id="mainHeader" class="headerAbout">   
+        <h1 id="titleHeader" class="titleHeader">Structure</h1>
+        <nav id="subNavi">
+            <ul id="subNaviItems">
+                <li class="liSub"><a onclick="GoToHomePage()" href="javascript:void(0)">Home</a></li>
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub"><a href="structure.html">Structure</a></li>
+                <li class="liSub"><span class="spaceSub"><img src="images/titleline.png" alt=""/></span></li>
+                <li class="liSub active"><a class="active" href="structureBoxme.html">Box Me</a></li>
+            </ul>
+        </nav>
+    </div>
+</div>
 <div id="infoDescription">
     <div id="infoDsc">
         <div id="infoFull">
